--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+2-19 [台湾局势引关注 美议员重提《防止台湾遭侵略法》](/articles/dw/1043801.md)
+
+2-19 [伊朗喊话美国：若解除制裁 德黑兰将扭转核行动](/articles/dw/1043802.md)
+
+2-19 [德语媒体：美国和中国——欧洲选谁当“闺蜜”？](/articles/dw/1043803.md)
+
+2-19 [新冠肺炎大事记](/articles/dw/1043804.md)
+
 2-19 [德国政府警告北京长臂管辖在德港人](/articles/dw/1043805.md)
 
 2-19 [汉堡物理学家：“我99.9％确信新冠病毒来自实验室”](/articles/dw/1043806.md)
@@ -592,12 +600,4 @@
 2-3 [中俄拖延安理会行动  美国制裁缅甸军方](/articles/dw/1044099.md)
 
 2-3 [中俄拖延安理会行动  美宣布重新制裁缅甸](/articles/dw/1044100.md)
-
-2-3 [「12港人案」又一律师遭吊照 美发声明谴责北京](/articles/dw/1044101.md)
-
-2-2 [首次平民太空旅游  亿万富翁馈赠三席空位](/articles/dw/1044102.md)
-
-2-2 [昂山素季与缅甸的民主运动](/articles/dw/1044103.md)
-
-2-2 [德语媒体：西方应该害怕中国崛起吗?](/articles/dw/1044104.md)
 
