--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-19 [台坚持向德国原厂采购疫苗  上海复星成变数](/articles/rfa/1046359.md)
+
 2-19 [香港广播处长突提前解约   公营广播或沦为“官方喉舌”？](/articles/rfa/1046360.md)
 
 2-19 [中印边境冲突8个月后       中国承认4名解放军阵亡](/articles/rfa/1046361.md)
@@ -598,6 +600,4 @@
 1-19 [特朗普将中国定位战略对手 台学者：拜登将采联合盟友制约中国](/articles/rfa/1046657.md)
 
 1-19 [黑省农村成疫情重灾区    河北封门绑人出尽恶招](/articles/rfa/1046658.md)
-
-1-19 [声援伊力哈木研讨会  苏晓康：认清习近平种族灭绝政策](/articles/rfa/1046659.md)
 
