--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-20 [美国国务卿布林肯声明全文：美国正式重新加入巴黎协定](/articles/voa/1042802.md)
+
+2-20 [台湾国安团队高层变动 邱国正任国防部长](/articles/voa/1042803.md)
+
 2-19 [中国称有4名军人在去年六月中印边境冲突中死亡](/articles/voa/1042804.md)
 
 2-19 [拜登对欧洲进行“视频访问” 呼吁盟友共同应对中俄挑战](/articles/voa/1042805.md)
@@ -596,8 +600,4 @@
 2-9 [VOA连线(文灏): 针对特朗普的第二次弹劾审判即将拉开序幕](/articles/voa/1043100.md)
 
 2-9 [世卫专家组发现有关新冠病毒源头的“重要线索”](/articles/voa/1043101.md)
-
-2-9 [缅甸民众持续上街抗议 军人统治者宣布宵禁](/articles/voa/1043102.md)
-
-2-9 [共和党众议员怀特感染新冠病毒住院两周后辞世](/articles/voa/1043103.md)
 
