--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-20 [蔡英文布局新国安铁三角  学者：向大陆释善意](/articles/rfa/1046357.md)
+
+2-20 [台大教授违法参与中国“千人计划”  台湾开罚](/articles/rfa/1046358.md)
+
 2-19 [台坚持向德国原厂采购疫苗  上海复星成变数](/articles/rfa/1046359.md)
 
 2-19 [香港广播处长突提前解约   公营广播或沦为“官方喉舌”？](/articles/rfa/1046360.md)
@@ -596,8 +600,4 @@
 1-19 [常玮平一家困境欲盖弥彰  谢阳陈科云西安遭当局软禁](/articles/rfa/1046655.md)
 
 1-19 [中国对台工作揭“四要” 台学者：脱勾大势所趋 台商无法自外](/articles/rfa/1046656.md)
-
-1-19 [特朗普将中国定位战略对手 台学者：拜登将采联合盟友制约中国](/articles/rfa/1046657.md)
-
-1-19 [黑省农村成疫情重灾区    河北封门绑人出尽恶招](/articles/rfa/1046658.md)
 
