--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-20 [港府批准中国制科兴疫苗紧急使用 民主党批仓卒通过打击市民信心](/articles/voa/1042800.md)
+
+2-20 [香港电台雇员被要求宣誓效忠 工会对电台前途担忧](/articles/voa/1042801.md)
+
 2-20 [美国国务卿布林肯声明全文：美国正式重新加入巴黎协定](/articles/voa/1042802.md)
 
 2-20 [台湾国安团队高层变动 邱国正任国防部长](/articles/voa/1042803.md)
@@ -596,8 +600,4 @@
 2-9 [五角大楼: 美国将确保国家利益不受中国侵害](/articles/voa/1043098.md)
 
 2-9 [美国国务院发言人: 美国重新加入联合国人权理事会将带来积极改变](/articles/voa/1043099.md)
-
-2-9 [VOA连线(文灏): 针对特朗普的第二次弹劾审判即将拉开序幕](/articles/voa/1043100.md)
-
-2-9 [世卫专家组发现有关新冠病毒源头的“重要线索”](/articles/voa/1043101.md)
 
