--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+2-20 [疫情溯源   世卫锁定两种动物     美国排除冷链说](/articles/rfa/1046353.md)
+
+2-20 [法国外长：援助多国但不同于中国的非洲模式](/articles/rfa/1046354.md)
+
+2-20 [加拿大议会讨论新疆种族灭绝议案  下周有望通过](/articles/rfa/1046355.md)
+
+2-20 [中国旅美民运人士发起“新黄雀行动”   援助香港流亡者](/articles/rfa/1046356.md)
+
 2-20 [蔡英文布局新国安铁三角  学者：向大陆释善意](/articles/rfa/1046357.md)
 
 2-20 [台大教授违法参与中国“千人计划”  台湾开罚](/articles/rfa/1046358.md)
@@ -592,12 +600,4 @@
 1-20 [欧盟民调：多数欧洲人认为中国将取代美国成为世界领先国家](/articles/rfa/1046651.md)
 
 1-19 [流亡乌克兰的哈萨克族男子：仍担忧遭到遣返](/articles/rfa/1046652.md)
-
-1-19 [市委书记掌掴市政府秘书长   上级干部下属如“奴隶”](/articles/rfa/1046653.md)
-
-1-19 [港府要求全体公务员宣誓拥护政府 学者担心体制内异议声音绝迹](/articles/rfa/1046654.md)
-
-1-19 [常玮平一家困境欲盖弥彰  谢阳陈科云西安遭当局软禁](/articles/rfa/1046655.md)
-
-1-19 [中国对台工作揭“四要” 台学者：脱勾大势所趋 台商无法自外](/articles/rfa/1046656.md)
 
