--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-20 [美国：拜登改革移民政策计划呈国会](/articles/rfi/1034407.md)
+
+2-20 [北约推迟阿富汗决策 增强部署伊拉克](/articles/rfi/1034408.md)
+
 2-20 [七国集团首脑联合声明：致力建立公平互利的全球经济体系](/articles/rfi/1034409.md)
 
 2-20 [美众院两党议员就香港问题提出动议谴责中国](/articles/rfi/1034410.md)
@@ -596,8 +600,4 @@
 2-15 [以色列研究：辉瑞&amp;BNT疫苗效力达94% – 法国国际广播电台 - RFI](/articles/rfi/1034705.md)
 
 2-15 [皮古拉拍落丝薇托莉娜 首晋澳网女单8强 – 法国国际广播电台 - RFI](/articles/rfi/1034706.md)
-
-2-15 [加泰隆尼亚议会选举 独派席次增 – 法国国际广播电台 - RFI](/articles/rfi/1034707.md)
-
-2-15 [缅甸军方开枪驱离示威者 至少5名记者遭逮捕 – 法国国际广播电台 - RFI](/articles/rfi/1034708.md)
 
