--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-20 [拜登承诺向国际新冠疫苗项目出资40亿美元](/articles/voa/1042798.md)
+
 2-20 [专家提醒：不建议中国用户在Clubhouse进行敏感对话](/articles/voa/1042799.md)
 
 2-20 [港府批准中国制科兴疫苗紧急使用 民主党批仓卒通过打击市民信心](/articles/voa/1042800.md)
@@ -598,6 +600,4 @@
 2-9 [巴基斯坦本月将接待美国、中国和俄罗斯等多国海军参加军演](/articles/voa/1043096.md)
 
 2-9 [“参与更有利于改革“ 美国重返联合国人权理事会引发不同反应](/articles/voa/1043097.md)
-
-2-9 [五角大楼: 美国将确保国家利益不受中国侵害](/articles/voa/1043098.md)
 
