--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-20 [东北试点放开生育？学者：为时已晚](/articles/rfa/1046348.md)
+
+2-20 [中国前首富黄光裕获释后大表“爱党爱国”](/articles/rfa/1046349.md)
+
+2-20 [“白酒院士”后又现“黄金院士”      院士成什么了？](/articles/rfa/1046350.md)
+
 2-20 [G7与慕尼黑安全会议  美欧重携手抗独裁](/articles/rfa/1046351.md)
 
 2-20 [三百余人联署促尽快出台《政府法》 向官员问责](/articles/rfa/1046352.md)
@@ -594,10 +600,4 @@
 1-20 [疫期回家  台湾、大陆人待遇天壤有别](/articles/rfa/1046646.md)
 
 1-20 [四川教授跳楼自杀    “学法律、新闻救不了自己”](/articles/rfa/1046647.md)
-
-1-20 [美国家情报总监提名人：将继续反制中国不法行为](/articles/rfa/1046648.md)
-
-1-20 [世卫组织独立专家小组批评中国和世卫组织疫情初期行动迟缓](/articles/rfa/1046649.md)
-
-1-20 [加拿大企业在新疆开采资源  恐涉及违反人权行为](/articles/rfa/1046650.md)
 
