--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-20 [拜登：国际社会必须反击北京的经济威胁](/articles/voa/1042796.md)
+
 2-20 [美国正式重返巴黎协定 拜登:气候变化是全球生存危机](/articles/voa/1042797.md)
 
 2-20 [拜登承诺向国际新冠疫苗项目出资40亿美元](/articles/voa/1042798.md)
@@ -598,6 +600,4 @@
 2-9 [新冠疫苗接种数字护照未问世先惹关注](/articles/voa/1043094.md)
 
 2-9 [特朗普在国会骚乱事件前说了什么?](/articles/voa/1043095.md)
-
-2-9 [巴基斯坦本月将接待美国、中国和俄罗斯等多国海军参加军演](/articles/voa/1043096.md)
 
