--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-20 [被控隐瞒中国军人身份的斯坦福研究人员受到新起诉并增加罪名](/articles/voa/1042793.md)
+
+2-20 [拜登：我们处在维护民主制历史拐点 必须为与中国长期战略竞争做好准备](/articles/voa/1042794.md)
+
+2-20 [拜登时代，建“小院高墙”保护科技优势](/articles/voa/1042795.md)
+
 2-20 [拜登：国际社会必须反击北京的经济威胁](/articles/voa/1042796.md)
 
 2-20 [美国正式重返巴黎协定 拜登:气候变化是全球生存危机](/articles/voa/1042797.md)
@@ -594,10 +600,4 @@
 2-9 [美国家长担心网课影响学生心理健康](/articles/voa/1043091.md)
 
 2-9 [旧金山学校将改名 去除华盛顿林肯等人名](/articles/voa/1043092.md)
-
-2-9 [中美互相试探对台决心，北京必定相当失望](/articles/voa/1043093.md)
-
-2-9 [新冠疫苗接种数字护照未问世先惹关注](/articles/voa/1043094.md)
-
-2-9 [特朗普在国会骚乱事件前说了什么?](/articles/voa/1043095.md)
 
