--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-20 [华春莹发言人一句话惹得爆笑如雷](/articles/rfi/1034396.md)
+
+2-20 [马克龙建议西方国家迅速向非洲运送1300万剂新冠疫苗](/articles/rfi/1034397.md)
+
+2-20 [比特币再创新高 总市值突破1兆美元 – 法国国际广播电台 - RFI](/articles/rfi/1034398.md)
+
+2-20 [香港司法系统最近在朝着惩罚性的方向偏移 - 法国世界报](/articles/rfi/1034399.md)
+
 2-20 [拜登直指北京破坏规则经济滥用](/articles/rfi/1034400.md)
 
 2-20 [美国宣告“重返”大西洋联盟 - 要闻分析](/articles/rfi/1034401.md)
@@ -592,12 +600,4 @@
 2-15 [缅甸民众继续抵抗政变但今街头示威人减 古特雷斯表高度关注 联合国称是政治变故](/articles/rfi/1034694.md)
 
 2-15 [德州酷寒引发供应疑虑 WTI油价每桶涨破60美元 – 法国国际广播电台 - RFI](/articles/rfi/1034695.md)
-
-2-15 [安装追踪软件和考虑以接种疫苗为香港复业前提 遭质疑效星洲政府毁诺](/articles/rfi/1034696.md)
-
-2-15 [中国最后一个原始部落村火灾](/articles/rfi/1034697.md)
-
-2-15 [日股收红 日经30多年来首度破3万点 – 法国国际广播电台 - RFI](/articles/rfi/1034698.md)
-
-2-15 [川普弹劾案告终 共和党党魂之争才开始 – 法国国际广播电台 - RFI](/articles/rfi/1034699.md)
 
