--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+2-20 [BioNTech/辉瑞疫苗不再需要超低温储存](/articles/ft/1046026.md)
+
+2-20 [G7领导人承诺向发展中国家增加疫苗供应](/articles/ft/1046027.md)
+
+2-20 [决定2020年美国大选的120场诉讼](/articles/ft/1046028.md)
+
 2-20 [金正恩困境：“核武大跃进”与“经济大跃进”不可兼得](/articles/ft/1046029.md)
 
 2-19 [爱马仕因中国的强劲增长获益](/articles/ft/1046030.md)
@@ -594,10 +600,4 @@
 1-11 [一周世界舆论聚焦：对全球抗疫“政治挂帅”的担忧](/articles/ft/1046324.md)
 
 1-11 [市场交易逻辑未变，但预期差已现](/articles/ft/1046325.md)
-
-1-11 [回看“红潮”，理解迟到“蓝潮”的市场冲击](/articles/ft/1046326.md)
-
-1-9 [“无需审判，就地枪决”](/articles/ft/1046327.md)
-
-1-8 [中欧投资协定：欧盟加强战略自主，但欧美并未彼此远离](/articles/ft/1046328.md)
 
