--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-20 [小人物“不知敬畏” 张盼成争自由再发视频批习被捕](/articles/voa/1042783.md)
+
 2-20 [台更换防长因应国际政经变局 中共军机飞入台湾防空识别区](/articles/voa/1042784.md)
 
 2-20 [拜登参观辉瑞新冠疫苗生产厂](/articles/voa/1042785.md)
@@ -598,6 +600,4 @@
 2-9 [疫情之下 中共缘何不发直接救济给民众？](/articles/voa/1043081.md)
 
 2-9 [拜登上任后首次 美国海军双航母在南中国海演习](/articles/voa/1043082.md)
-
-2-9 [缅甸大规模示威进入第四天 警方逮捕了至少几十人](/articles/voa/1043083.md)
 
