--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-20 [莫斯科上诉法院维持对反对派领袖纳瓦尔尼的判决](/articles/voa/1042781.md)
+
 2-20 [比特币采矿风靡中国 新疆人权或引发投资者关注](/articles/voa/1042782.md)
 
 2-20 [小人物“不知敬畏” 张盼成争自由再发视频批习被捕](/articles/voa/1042783.md)
@@ -598,6 +600,4 @@
 2-9 [耿潇男被判3年，接受所有控罪，换他人自由](/articles/voa/1043079.md)
 
 2-9 [林郑月娥称香港不承认双重国籍](/articles/voa/1043080.md)
-
-2-9 [疫情之下 中共缘何不发直接救济给民众？](/articles/voa/1043081.md)
 
