--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-20 [缅甸警方对抗议者开枪 至少2人死亡](/articles/dw/1043793.md)
+
+2-20 [缅甸LGBTQ群体上街抗议军事独裁](/articles/dw/1043794.md)
+
 2-20 [迪拜公主被父囚禁？阿联酋回应“她在家”](/articles/dw/1043795.md)
 
 2-20 [德国会不会继续是 “欧洲妓院“？](/articles/dw/1043796.md)
@@ -596,8 +600,4 @@
 2-3 [香港律师李柱铭被提名诺贝尔和平奖](/articles/dw/1044091.md)
 
 2-3 [世卫专家组访武汉病毒研究所](/articles/dw/1044092.md)
-
-2-3 [“坚持正确政治方向” 中国收紧自媒体言论](/articles/dw/1044093.md)
-
-2-3 [英国百岁高龄“汤姆上尉”因新冠去世](/articles/dw/1044094.md)
 
