--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-21 [“人人影视”没戏 Netflix登陆无门](/articles/voa/1042779.md)
+
 2-20 [媒体证实：缅甸警方向示威者发射实弹，两人死亡](/articles/voa/1042780.md)
 
 2-20 [莫斯科上诉法院维持对反对派领袖纳瓦尔尼的判决](/articles/voa/1042781.md)
@@ -598,6 +600,4 @@
 2-9 [人权组织谴责针对藏人的强迫劳动政策](/articles/voa/1043077.md)
 
 2-9 [蔡英文称台湾遇到压力不会屈服 愿在对等尊严原则下促成两岸对话](/articles/voa/1043078.md)
-
-2-9 [耿潇男被判3年，接受所有控罪，换他人自由](/articles/voa/1043079.md)
 
