--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-21 [大象公会｜当作家，为什么要进作协](/articles/cdt/385746.md)
+
 2-20 [自由亚洲 | 陈光诚：特别关注李翘楚：临沂市看守所异常邪恶](/articles/cdt/385747.md)
 
 2-20 [华尔街日报 | 蚂蚁IPO被叫停的另一个原因：潜在受益的权贵人物在调查中浮出水面（节选）](/articles/cdt/385748.md)
@@ -598,6 +600,4 @@
 1-19 [【404文库】鱼眼观察｜书记掌掴秘书长，举报人被“解决”了？​](/articles/cdt/386901.md)
 
 1-19 [叙拉古之惑｜徐贲：重申启蒙的四个主题](/articles/cdt/386903.md)
-
-1-19 [人物｜一群穷孩子的人生实验](/articles/cdt/386910.md)
 
