--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-21 [俄罗斯在叙利亚大轰炸 至少21名圣战者丧生](/articles/rfi/1034345.md)
+
+2-21 [法外长：我们已和中国进入对外发展模式和影响力之战](/articles/rfi/1034346.md)
+
 2-21 [缅甸警方向示威者开枪击毙2人 伤30人](/articles/rfi/1034347.md)
 
 2-21 [乌克兰严厉制裁亲俄罗斯反对派领袖](/articles/rfi/1034348.md)
@@ -596,8 +600,4 @@
 2-16 [缅甸军方打压民众示威 连2晚切断网路连线 – 法国国际广播电台 - RFI](/articles/rfi/1034643.md)
 
 2-16 [沙乌地阿拉伯出招 力促外企于境内设总部 – 法国国际广播电台 - RFI](/articles/rfi/1034644.md)
-
-2-16 [李柱铭等9名民主派被控组织非法集会 李卓人称要为港人集会游行自由而战](/articles/rfi/1034645.md)
-
-2-16 [香港疫情受控？首次连日现单位数确诊个案](/articles/rfi/1034646.md)
 
