--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-21 [法国敦刻尔克英国变种病毒猛增 青年患者居多](/articles/rfi/1034344.md)
+
 2-21 [俄罗斯在叙利亚大轰炸 至少21名圣战者丧生](/articles/rfi/1034345.md)
 
 2-21 [法外长：我们已和中国进入对外发展模式和影响力之战](/articles/rfi/1034346.md)
@@ -598,6 +600,4 @@
 2-16 [COVID-19疫情缓解带来乐观情绪 欧股开盘小升 – 法国国际广播电台 - RFI](/articles/rfi/1034642.md)
 
 2-16 [缅甸军方打压民众示威 连2晚切断网路连线 – 法国国际广播电台 - RFI](/articles/rfi/1034643.md)
-
-2-16 [沙乌地阿拉伯出招 力促外企于境内设总部 – 法国国际广播电台 - RFI](/articles/rfi/1034644.md)
 
