--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-21 [阿根廷和秘鲁接种Covid疫苗插队丑闻](/articles/rfi/1034343.md)
+
 2-21 [法国敦刻尔克英国变种病毒猛增 青年患者居多](/articles/rfi/1034344.md)
 
 2-21 [俄罗斯在叙利亚大轰炸 至少21名圣战者丧生](/articles/rfi/1034345.md)
@@ -598,6 +600,4 @@
 2-16 [澳洲撤销双重国籍恐怖分子护照 纽西兰总理批卸责 – 法国国际广播电台 - RFI](/articles/rfi/1034641.md)
 
 2-16 [COVID-19疫情缓解带来乐观情绪 欧股开盘小升 – 法国国际广播电台 - RFI](/articles/rfi/1034642.md)
-
-2-16 [缅甸军方打压民众示威 连2晚切断网路连线 – 法国国际广播电台 - RFI](/articles/rfi/1034643.md)
 
