--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-21 [BBC | 中印冲突：时隔八个月后中国公布四名官兵死亡的背后考量](/articles/cdt/385737.md)
+
 2-21 [【旧闻重温】何清涟｜一部伟大的现实魔幻主义作品：2.20茉莉花革命](/articles/cdt/385745.md)
 
 2-21 [大象公会｜当作家，为什么要进作协](/articles/cdt/385746.md)
@@ -598,6 +600,4 @@
 1-20 [VOA | 特朗普政府宣布中国在新疆犯下种族灭绝和反人类罪](/articles/cdt/386886.md)
 
 1-19 [冰点周刊｜“相比病毒，我更怕泄露个人隐私，丢掉工作”](/articles/cdt/386899.md)
-
-1-19 [【404文库】鱼眼观察｜书记掌掴秘书长，举报人被“解决”了？​](/articles/cdt/386901.md)
 
