--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-21 [俄罗斯发现世界首批H5N8禽流感传人病例](/articles/voa/1042773.md)
+
 2-21 [拜登将与特鲁多举行首次双边会晤](/articles/voa/1042774.md)
 
 2-21 [拜登批准德克萨斯州重大灾情宣布，实施联邦救助](/articles/voa/1042775.md)
@@ -598,6 +600,4 @@
 2-10 [时事大家谈: 李文亮去世一周年，网络祭奠的悲与不舍](/articles/voa/1043071.md)
 
 2-10 [黎智英国安法勾结罪保释案 终审法院判律政司上诉得直需继续还柙](/articles/voa/1043072.md)
-
-2-10 [博雷利提醒王毅欧美关系牢固，中方通报对此只字未提](/articles/voa/1043073.md)
 
