--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-21 [【CDT专稿】一枚  |  应鸣而尊，迫默则辱 ——江棋生老师印象](/articles/cdt/385732.md)
+
 2-21 [鱼眼观察 | 饿了么又开始作妖了](/articles/cdt/385734.md)
 
 2-21 [BBC | 中印冲突：时隔八个月后中国公布四名官兵死亡的背后考量](/articles/cdt/385737.md)
@@ -598,6 +600,4 @@
 1-20 [【异闻观止】共青团中央｜2020年度热词西方普遍“致郁” 而中国热词满是“正能量”](/articles/cdt/386877.md)
 
 1-20 [维舟 | “你也配？”：中国社会的“资格”意识](/articles/cdt/386883.md)
-
-1-20 [骚客文艺 | 有些抗疫口号，总让人觉得“不对劲”](/articles/cdt/386884.md)
 
