--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-21 [中国南中国海军演，台湾战机再度紧急升空](/articles/voa/1042772.md)
+
 2-21 [俄罗斯发现世界首批H5N8禽流感传人病例](/articles/voa/1042773.md)
 
 2-21 [拜登将与特鲁多举行首次双边会晤](/articles/voa/1042774.md)
@@ -598,6 +600,4 @@
 2-10 [世卫组织报告称病毒极不可能由实验室泄露 白宫表示将审视相关结论及数据](/articles/voa/1043070.md)
 
 2-10 [时事大家谈: 李文亮去世一周年，网络祭奠的悲与不舍](/articles/voa/1043071.md)
-
-2-10 [黎智英国安法勾结罪保释案 终审法院判律政司上诉得直需继续还柙](/articles/voa/1043072.md)
 
