--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-21 [脸书删除缅甸军方网站主页](/articles/voa/1042769.md)
+
 2-21 [经过最暴力的一天后，缅甸抗议者再次聚集](/articles/voa/1042770.md)
 
 2-21 [全球行动唤缅甸自由，南加州支持者呼吁北京停止干涉](/articles/voa/1042771.md)
@@ -598,6 +600,4 @@
 2-10 [在尼日利亚被绑架的中国工人获救](/articles/voa/1043067.md)
 
 2-10 [继美海军之后 法国宣布核潜艇巡航南中国海](/articles/voa/1043068.md)
-
-2-10 [俄反对派调整抗议策略 普京也换招儿动用高科技](/articles/voa/1043069.md)
 
