--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-21 [【404文库】财新副主编高昱年终总结： “三十年启蒙失败了”](/articles/cdt/385717.md)
+
 2-21 [房东经济学Pro | 观察者网的大佬级嘉宾陈平在美国的大房子被扒出来了](/articles/cdt/385722.md)
 
 2-21 [【CDT专稿】一枚  |  应鸣而尊，迫默则辱 ——江棋生老师印象](/articles/cdt/385732.md)
@@ -598,6 +600,4 @@
 1-20 [德国之声｜美国准内阁出席任命听证会 展现抗中立场](/articles/cdt/386862.md)
 
 1-21 [人间theLivings｜城管队伍里，那个被嘲笑的老实人决定考编](/articles/cdt/386863.md)
-
-1-20 [汪有｜是人的底线和拒绝让人更有价值](/articles/cdt/386864.md)
 
