--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-21 [缅甸军方镇压的首位受害者下葬 成千上万人向她致意](/articles/rfi/1034304.md)
+
+2-21 [河内会晤后，特朗普曾提议让金正恩搭空军一号回国](/articles/rfi/1034305.md)
+
+2-21 [厄瓜多总统大选第二轮投票 候选人出炉 – 法国国际广播电台 - RFI](/articles/rfi/1034306.md)
+
+2-21 [全球逾1亿1105万例确诊染疫 246万多人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1034307.md)
+
 2-21 [被指用中国技术和服务器 翻墙到这里聊天当心隔墙有耳](/articles/rfi/1034308.md)
 
 2-21 [「你想被叫珍妮还是珍妮佛？」大（土反）直美为口误道歉 – 法国国际广播电台 - RFI](/articles/rfi/1034309.md)
@@ -592,12 +600,4 @@
 2-17 [无惧风雪！拜登：1亿人接种目标不变](/articles/rfi/1034602.md)
 
 2-17 [法新社：特鲁多将致力于讨论新疆维吾尔遭种族灭绝](/articles/rfi/1034603.md)
-
-2-17 [土耳其召见美国大使](/articles/rfi/1034604.md)
-
-2-17 [匈牙利成为首个购买中国疫苗的欧盟国家](/articles/rfi/1034605.md)
-
-2-17 [港专家建议政府紧急使用科兴疫苗](/articles/rfi/1034606.md)
-
-2-17 [首位因国安法被捕外国人 关尚义对港仍抱信心](/articles/rfi/1034607.md)
 
