--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-21 [德国庆祝犹太人在德生活1700年](/articles/dw/1043777.md)
+
 2-21 [墙外文摘：周边国家已为台海冲突备战？](/articles/dw/1043778.md)
 
 2-21 [以色列：辉瑞疫苗防感染有效率95.8%](/articles/dw/1043779.md)
@@ -598,6 +600,4 @@
 2-4 [前乌干达叛军指挥官被海牙国际法庭裁定有罪](/articles/dw/1044075.md)
 
 2-4 [苦等日本道歉的韓國老太太](/articles/dw/1044076.md)
-
-2-4 [2020全球民主指数报告： 台湾民主进步 香港民主倒退](/articles/dw/1044077.md)
 
