--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-21 [尼日尔2021总统大选具有历史性意义](/articles/rfi/1034301.md)
+
+2-21 [缅甸军方对民施暴 联合国秘书长：不可接受](/articles/rfi/1034302.md)
+
+2-21 [大直美更成熟 不再怕当新世代选手榜样 – 法国国际广播电台 - RFI](/articles/rfi/1034303.md)
+
 2-21 [缅甸军方镇压的首位受害者下葬 成千上万人向她致意](/articles/rfi/1034304.md)
 
 2-21 [河内会晤后，特朗普曾提议让金正恩搭空军一号回国](/articles/rfi/1034305.md)
@@ -594,10 +600,4 @@
 2-17 [被北京制裁的蓬佩奥奥布莱恩等人将主持论坛就美国外交政策定期高调发声](/articles/rfi/1034599.md)
 
 2-17 [缅甸军政府加重翁山苏姬罪名 美英谴责吁放人 – 法国国际广播电台 - RFI](/articles/rfi/1034600.md)
-
-2-17 [央行数字货币的价值属性：央行负债，还是私人负债 ？ - 今日经济](/articles/rfi/1034601.md)
-
-2-17 [无惧风雪！拜登：1亿人接种目标不变](/articles/rfi/1034602.md)
-
-2-17 [法新社：特鲁多将致力于讨论新疆维吾尔遭种族灭绝](/articles/rfi/1034603.md)
 
