--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-22 [比特币正在成为一头灰犀牛吗？](/articles/ft/1046023.md)
+
 2-20 [阿根廷卫生部长因“VIP疫苗”丑闻被解职](/articles/ft/1046024.md)
 
 2-20 [拜登向世界宣告“美国回来了”](/articles/ft/1046025.md)
@@ -598,6 +600,4 @@
 1-11 [危机管理课程帮助EMBA学员应对疫情](/articles/ft/1046321.md)
 
 1-11 [美国部分参议员对弹劾特朗普态度消极](/articles/ft/1046322.md)
-
-1-11 [国会冲击事件和美国政治衰败的信号](/articles/ft/1046323.md)
 
