--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-22 [时间在中国一边吗](/articles/nyt/1047172.md)
+
 2-19 [知名华裔设计师王大仁遭多名男性指控性行为不端](/articles/nyt/1047173.md)
 
 2-19 [针对亚裔的种族主义并不新鲜](/articles/nyt/1047174.md)
@@ -598,6 +600,4 @@
 12-7 [美国新版入籍考试模拟测验，看看你能答对几道题](/articles/nyt/1047470.md)
 
 12-7 [中国兜售虚假信息，推动新冠病毒海外起源论](/articles/nyt/1047471.md)
-
-12-7 [简报：中国兜售新冠海外起源论；特朗普私人律师感染新冠](/articles/nyt/1047472.md)
 
