--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-22 [美国与伊朗开始人质谈判](/articles/voa/1042763.md)
+
 2-22 [印度、中国完成从湖区边境撤军](/articles/voa/1042764.md)
 
 2-22 [中共两会前夕数百公民联署促出台《政府法》监督官员依法行政](/articles/voa/1042765.md)
@@ -598,6 +600,4 @@
 2-10 [缅甸警方镇压抗议人士](/articles/voa/1043061.md)
 
 2-10 [民主党与共和党针对弹劾案的策略](/articles/voa/1043062.md)
-
-2-10 [联友制中 拜登的战略能否成功？](/articles/voa/1043063.md)
 
