--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-22 [习近平要求学好党史深意何在](/articles/rfi/1034287.md)
+
 2-22 [新冠病毒起源于武汉实验室？汉堡研究报告被指不严谨](/articles/rfi/1034288.md)
 
 2-22 [爱拉斯莫的生活与思想第七节 爱拉斯莫的基督哲学 - 欧洲思想文化长廊](/articles/rfi/1034289.md)
@@ -598,6 +600,4 @@
 2-17 [上任后首次  拜登下乡争取支持1.9兆美元纾困案 – 法国国际广播电台 - RFI](/articles/rfi/1034585.md)
 
 2-17 [穆霍娃逆转挥落球后巴蒂 晋澳网女单4强 – 法国国际广播电台 - RFI](/articles/rfi/1034586.md)
-
-2-17 [预期全球经济复苏 港股午盘收涨 – 法国国际广播电台 - RFI](/articles/rfi/1034587.md)
 
