--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-22 [中印争议边界 双方完成局部撤军 – 法国国际广播电台 - RFI](/articles/rfi/1034286.md)
+
 2-22 [习近平要求学好党史深意何在](/articles/rfi/1034287.md)
 
 2-22 [新冠病毒起源于武汉实验室？汉堡研究报告被指不严谨](/articles/rfi/1034288.md)
@@ -598,6 +600,4 @@
 2-17 [川普：选战若没我站台 麦康奈会输得很惨 – 法国国际广播电台 - RFI](/articles/rfi/1034584.md)
 
 2-17 [上任后首次  拜登下乡争取支持1.9兆美元纾困案 – 法国国际广播电台 - RFI](/articles/rfi/1034585.md)
-
-2-17 [穆霍娃逆转挥落球后巴蒂 晋澳网女单4强 – 法国国际广播电台 - RFI](/articles/rfi/1034586.md)
 
