--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-22 [王毅吁美取消关税 盼关系重回正轨](/articles/dw/1043772.md)
+
+2-22 [缅甸示威者号召罢工 政府威胁出动致命武器](/articles/dw/1043773.md)
+
 2-22 [中印完成撤军 边境紧张局势缓解](/articles/dw/1043774.md)
 
 2-22 [近50万人死于新冠肺炎 美再指中国隐瞒数据](/articles/dw/1043775.md)
@@ -596,8 +600,4 @@
 2-5 [海伦娜·岑格尔获金球奖提名](/articles/dw/1044070.md)
 
 2-4 [接种者享受特殊规定？德伦理委员会说不](/articles/dw/1044071.md)
-
-2-4 [德语媒体: “惨胜“的欧中协议与“飘扬“的五星红旗](/articles/dw/1044072.md)
-
-2-4 [德国总理看好俄罗斯疫苗](/articles/dw/1044073.md)
 
