--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-22 [他自称朝鲜的“桂冠诗人”，两名女性称他为强奸犯](/articles/nyt/1047168.md)
+
 2-22 [香港电台遭“整改”，外界担忧港府打击新闻自由](/articles/nyt/1047169.md)
 
 2-22 [面临抵制冬奥呼声，中国人权问题可能改善吗？](/articles/nyt/1047170.md)
@@ -598,6 +600,4 @@
 12-8 [《76天》：武汉封城中的泪水与希望](/articles/nyt/1047466.md)
 
 12-8 [简报：中国“疫苗之王”的丑闻与争议；印度暴发不明疾病](/articles/nyt/1047467.md)
-
-12-7 [中国“疫苗之王”：成功与财富幕布下的丑闻与争议](/articles/nyt/1047468.md)
 
