--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-22 [美现任和前任国安顾问都指责北京在新冠病毒起源问题上不透明](/articles/voa/1042755.md)
+
 2-22 [“老生常谈” 中国官员们继续为美国对华政策划红线](/articles/voa/1042756.md)
 
 2-22 [拜登公布上任一个月防疫成果，探视友台前议员多尔](/articles/voa/1042757.md)
@@ -598,6 +600,4 @@
 2-10 [政府大力扶持之下美厂商或有望开始与大疆竞争](/articles/voa/1043053.md)
 
 2-10 [美国务院：支持对话和平解决中印边界争端，与盟友站在一起](/articles/voa/1043054.md)
-
-2-10 [美参议院经过表决将弹劾审判继续下去](/articles/voa/1043055.md)
 
