--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-22 [军政府实弹镇压未遏制缅甸民主运动](/articles/dw/1043770.md)
+
 2-22 [中官员强调「爱国者治港」学者：中国想控制香港](/articles/dw/1043771.md)
 
 2-22 [王毅吁美取消关税 盼关系重回正轨](/articles/dw/1043772.md)
@@ -598,6 +600,4 @@
 2-5 [中国要求「纠正错误」圭亚那终止与台协议](/articles/dw/1044068.md)
 
 2-5 [伊莎贝尔·贝隆90岁了](/articles/dw/1044069.md)
-
-2-5 [海伦娜·岑格尔获金球奖提名](/articles/dw/1044070.md)
 
