--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-22 [极寒天气中，死在卧室、汽车和后院里的得州人](/articles/nyt/1047166.md)
+
 2-22 [中国建起了“防火长城”，俄罗斯为什么不这么做？](/articles/nyt/1047167.md)
 
 2-22 [他自称朝鲜的“桂冠诗人”，两名女性称他为强奸犯](/articles/nyt/1047168.md)
@@ -598,6 +600,4 @@
 12-8 [为什么大熊猫喜欢在马粪里打滚？](/articles/nyt/1047464.md)
 
 12-8 [电影《怪物猎人》被批辱华在中国下线](/articles/nyt/1047465.md)
-
-12-8 [《76天》：武汉封城中的泪水与希望](/articles/nyt/1047466.md)
 
