--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-22 [中共重整对台统战策略  捧直播主结合线上、线下操作](/articles/rfa/1046345.md)
+
 2-22 [北京高调纪念毛接班人华国锋     学者解读:否定邓小平路线](/articles/rfa/1046346.md)
 
 2-22 [北京为香港选举"盖棺定论"     阻"反中乱港者"进入体制](/articles/rfa/1046347.md)
@@ -598,6 +600,4 @@
 1-20 [美国新政府认同蓬佩奥种族灭绝指控   维吾尔人组织冀延续强硬制裁手段](/articles/rfa/1046643.md)
 
 1-20 [北京大兴日日新增病例    北方疫情令当局高度紧张](/articles/rfa/1046644.md)
-
-1-20 [候任国务卿布林肯：美中是“对抗”  美国能胜出](/articles/rfa/1046645.md)
 
