--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+2-22 [不顾死亡威胁 缅甸大批民众继续上街抗议军政府](/articles/voa/1042751.md)
+
+2-22 [展望电动汽车主宰市场前的重重挑战](/articles/voa/1042752.md)
+
+2-22 [对国会设立围栏和保安部队，民众看法各异](/articles/voa/1042753.md)
+
+2-22 [拜登难民政策终将扩展美国的移民安置计划](/articles/voa/1042754.md)
+
 2-22 [美现任和前任国安顾问都指责北京在新冠病毒起源问题上不透明](/articles/voa/1042755.md)
 
 2-22 [“老生常谈” 中国官员们继续为美国对华政策划红线](/articles/voa/1042756.md)
@@ -592,12 +600,4 @@
 2-10 [迈阿密冰箱失窃激起外界热情火花](/articles/voa/1043049.md)
 
 2-10 [北京冬奥会新挑战，运动员可能场上抗议践踏人权](/articles/voa/1043050.md)
-
-2-10 [2020疫情为野生动物提供休养生息](/articles/voa/1043051.md)
-
-2-10 [联合国保密报告：朝鲜利用网络攻击窃取核武研发经费](/articles/voa/1043052.md)
-
-2-10 [政府大力扶持之下美厂商或有望开始与大疆竞争](/articles/voa/1043053.md)
-
-2-10 [美国务院：支持对话和平解决中印边界争端，与盟友站在一起](/articles/voa/1043054.md)
 
