--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-22 [【立此存照】微博热文《那个坐在阳台上敲锣鸣病的人》作者被判刑半年](/articles/cdt/385707.md)
+
 2-22 [鱼眼观察｜教师“越级报警”丢饭碗，真相到底是什么？](/articles/cdt/385711.md)
 
 2-22 [苹果日报｜长平：十年前的「中国茉莉花革命」](/articles/cdt/385713.md)
@@ -598,6 +600,4 @@
 1-21 [【异闻观止】IT之家｜拼多多个别部门发起投票 让员工在“11116”和 “996” 中二选一](/articles/cdt/386843.md)
 
 1-21 [【时代的一粒沙】三联生活周刊 | 69岁环卫工寒冬猝死：回不了家的乡村老人](/articles/cdt/386845.md)
-
-1-21 [记者论坛｜以职务身份开设微博、微信等自媒体，将被纳入记者证核验重点](/articles/cdt/386849.md)
 
