--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-22 [联合国秘书长谴责缅甸军政府向示威者使用“致命暴力”](/articles/rfi/1034258.md)
+
+2-22 [欧盟外长开会 料对俄罗斯缅甸镇压行动祭制裁 – 法国国际广播电台 - RFI](/articles/rfi/1034259.md)
+
+2-22 [经济复苏利多不敌通膨疑虑 亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1034260.md)
+
+2-22 [缅甸民众静坐示威继续挑战军政府 - 法国报纸摘要](/articles/rfi/1034261.md)
+
 2-22 [波音777丹佛上空起火 全球各地有紧急停飞](/articles/rfi/1034262.md)
 
 2-22 [美军频扰南海之际台湾强化太平岛防务工程26日开标](/articles/rfi/1034263.md)
@@ -592,12 +600,4 @@
 2-17 [英法德义美联合声明谴责 伊拉克基地遭火箭攻击 – 法国国际广播电台 - RFI](/articles/rfi/1034556.md)
 
 2-17 [脸书未善尽个资保护 义大利再罚2.4亿元 – 法国国际广播电台 - RFI](/articles/rfi/1034557.md)
-
-2-17 [美军舰在南沙群岛进行航行自由行动](/articles/rfi/1034558.md)
-
-2-17 [布林肯受邀参加下周一欧盟外长会议 拟谈对华问题](/articles/rfi/1034559.md)
-
-2-17 [缅甸军民紧张对峙，联合国官员担心暴力进一步升级 - 要闻解说](/articles/rfi/1034560.md)
-
-2-17 [路透社：边境冲突缓解 印度拟重启部分的中国新投资计划 - 今日经济](/articles/rfi/1034561.md)
 
