--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-22 [中国环球电视网寻求在法国获得营业牌照](/articles/voa/1042742.md)
+
+2-22 [北京官员强调“爱国者治港”，香港或将进行选举改革](/articles/voa/1042743.md)
+
 2-22 [前副国家安全顾问博明指责中国试图掩盖新冠疫情](/articles/voa/1042744.md)
 
 2-22 [英国将在联合国就进入新疆问题挑战中国](/articles/voa/1042745.md)
@@ -596,8 +600,4 @@
 2-10 [无国界记者：报道疫情不是罪，北京应立即释放被捕记者](/articles/voa/1043040.md)
 
 2-10 [国际学界关注郭飞雄事件 致函中共高层领导人吁请放人](/articles/voa/1043041.md)
-
-2-10 [从缺席审判到没收涉案财产 中共加大对境外异议人士的威慑](/articles/voa/1043042.md)
-
-2-10 [加拿大情报高官：中国对国家安全与主权构成直接威胁](/articles/voa/1043043.md)
 
