--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-22 [英国外相：新疆发生的人权侵害是“工业化规模”](/articles/dw/1043755.md)
+
+2-22 [伊凡卡不选佛州参议员 特朗普2024年东山再起？](/articles/dw/1043756.md)
+
+2-22 [德语媒体：捍卫人权也是现实政治](/articles/dw/1043757.md)
+
 2-22 [意大利驻刚果民主共和国大使遇袭身亡](/articles/dw/1043758.md)
 
 2-22 [帝企鹅与气候变暖](/articles/dw/1043759.md)
@@ -594,10 +600,4 @@
 2-5 [“环保少女”力挺印度农民  被印度警方盯上](/articles/dw/1044053.md)
 
 2-5 [疫情之下 被冷藏的童年](/articles/dw/1044054.md)
-
-2-5 [冯德莱恩承认疫苗问题失误 匈牙利率先用俄疫苗](/articles/dw/1044055.md)
-
-2-5 [疫情纾困 德国儿童将获150欧元额外补贴](/articles/dw/1044056.md)
-
-2-5 [拜登首次外交宣示：大国回归，叫板中俄](/articles/dw/1044057.md)
 
