--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-23 [解放军连续两天20架次战机扰台](/articles/rfa/1046342.md)
+
+2-23 [王毅指称“美国前政府”打压中国 余茂春：贼喊捉贼](/articles/rfa/1046343.md)
+
 2-22 [网民评论中印冲突消息真伪后被拘](/articles/rfa/1046344.md)
 
 2-22 [中共重整对台统战策略  捧直播主结合线上、线下操作](/articles/rfa/1046345.md)
@@ -596,8 +600,4 @@
 1-20 [厦门聚会案：许志永和丁家喜遭升级指控“颠覆”](/articles/rfa/1046640.md)
 
 1-20 [布林肯：中共若武力犯台将是严重错误](/articles/rfa/1046641.md)
-
-1-20 [平民出境也犯法？   疑似秘密警察香港机场监视旅客惹恐慌](/articles/rfa/1046642.md)
-
-1-20 [美国新政府认同蓬佩奥种族灭绝指控   维吾尔人组织冀延续强硬制裁手段](/articles/rfa/1046643.md)
 
