--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-23 [时事大家谈: 威权主义步步紧逼，中国崛起意味着什么？](/articles/voa/1042734.md)
+
+2-23 [镇压迫害空前严酷 白俄罗斯危机仍在继续](/articles/voa/1042735.md)
+
 2-23 [联合国车队遇袭，意大利驻刚果（金）大使等三人身亡](/articles/voa/1042736.md)
 
 2-23 [东北地区生育政策将全面放开？中国卫健委给予澄清](/articles/voa/1042737.md)
@@ -596,8 +600,4 @@
 2-11 [美国疾控中心援引一项研究建议戴两幅口罩以更好防范新冠病毒](/articles/voa/1043032.md)
 
 2-11 [俄罗斯、中国与伊朗再次军演 想释放哪些信号](/articles/voa/1043033.md)
-
-2-11 [香港全球民主排名创新低 社运人士谈国安法下如何走民主路](/articles/voa/1043034.md)
-
-2-11 [白宫预算局局长提名人主张对华施压 逼中国遵守规则](/articles/voa/1043035.md)
 
