--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-23 [众院委员会通过拜登1.9万亿美国救援计划 里面都有啥？](/articles/voa/1042732.md)
+
 2-23 [美国宇航局补给飞船与国际空间站对接](/articles/voa/1042733.md)
 
 2-23 [时事大家谈: 威权主义步步紧逼，中国崛起意味着什么？](/articles/voa/1042734.md)
@@ -598,6 +600,4 @@
 2-11 [时事大家谈: 美中隔空较力，拜登为何点明习近平“不民主”？](/articles/voa/1043030.md)
 
 2-11 [白宫要义: 白宫: 派美国专家团到中国查新冠病毒起源“势在必行”](/articles/voa/1043031.md)
-
-2-11 [美国疾控中心援引一项研究建议戴两幅口罩以更好防范新冠病毒](/articles/voa/1043032.md)
 
