--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+2-23 [与美中上演“三国演义”，欧盟新贸易策略强调独立自主](/articles/voa/1042727.md)
+
+2-23 [克鲁兹参议员参加义工活动试图平息度假风波](/articles/voa/1042728.md)
+
+2-23 [白宫要义: 白宫重申联合盟友应对中国 拜登宣布新措施援助美国小企业](/articles/voa/1042729.md)
+
+2-23 [英国谴责中国在新疆对人权进行“工业化规模”的践踏](/articles/voa/1042730.md)
+
+2-23 [被提名为美司法部长的加兰德誓言彻底调查冲击国会事件](/articles/voa/1042731.md)
+
 2-23 [众院委员会通过拜登1.9万亿美国救援计划 里面都有啥？](/articles/voa/1042732.md)
 
 2-23 [美国宇航局补给飞船与国际空间站对接](/articles/voa/1042733.md)
@@ -590,14 +600,4 @@
 2-11 [弹劾案起诉方：特朗普是“总煽动者”](/articles/voa/1043025.md)
 
 2-11 [缅甸民众不顾镇压武力升高继续进行反政变抗议](/articles/voa/1043026.md)
-
-2-11 [拜登撤回特朗普的孔子学院限制规定？白宫做出回应](/articles/voa/1043027.md)
-
-2-11 [美国对发动政变的缅甸军方领导人实施制裁](/articles/voa/1043028.md)
-
-2-11 [拜-习尚未通话 专家指拜登还未敲定如何与习打交道](/articles/voa/1043029.md)
-
-2-11 [时事大家谈: 美中隔空较力，拜登为何点明习近平“不民主”？](/articles/voa/1043030.md)
-
-2-11 [白宫要义: 白宫: 派美国专家团到中国查新冠病毒起源“势在必行”](/articles/voa/1043031.md)
 
