--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+2-23 [关注李柱铭等人案件 佩洛西：庭审是对香港法治的侮辱](/articles/voa/1042723.md)
+
+2-23 [纽约众议员科特兹参与德州纾困并批评能源政策](/articles/voa/1042724.md)
+
+2-23 [美国务卿布林肯肯定美台共同推动圣卢西亚发展](/articles/voa/1042725.md)
+
+2-23 [加拿大众议院通过动议 认定中国政府压制维吾尔的行为构成种族灭绝](/articles/voa/1042726.md)
+
 2-23 [与美中上演“三国演义”，欧盟新贸易策略强调独立自主](/articles/voa/1042727.md)
 
 2-23 [克鲁兹参议员参加义工活动试图平息度假风波](/articles/voa/1042728.md)
@@ -592,12 +600,4 @@
 2-11 [美国加入世卫新冠疫苗获取机制资助金额维持现状](/articles/voa/1043021.md)
 
 2-11 [美国国务院: 争取同伙伴国合作解决缅甸危机](/articles/voa/1043022.md)
-
-2-11 [白宫力推纾困计划 疫苗分发强调公平](/articles/voa/1043023.md)
-
-2-11 [拜登：国防部成立中国工作组 应对来自中国日益严峻的挑战](/articles/voa/1043024.md)
-
-2-11 [弹劾案起诉方：特朗普是“总煽动者”](/articles/voa/1043025.md)
-
-2-11 [缅甸民众不顾镇压武力升高继续进行反政变抗议](/articles/voa/1043026.md)
 
