--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-23 [简报：林郑月娥公开接种科兴疫苗；缅甸抗议者全国大罢工](/articles/nyt/1047165.md)
+
 2-22 [极寒天气中，死在卧室、汽车和后院里的得州人](/articles/nyt/1047166.md)
 
 2-22 [中国建起了“防火长城”，俄罗斯为什么不这么做？](/articles/nyt/1047167.md)
@@ -598,6 +600,4 @@
 12-8 [被Pornhub毁掉的孩子](/articles/nyt/1047463.md)
 
 12-8 [为什么大熊猫喜欢在马粪里打滚？](/articles/nyt/1047464.md)
-
-12-8 [电影《怪物猎人》被批辱华在中国下线](/articles/nyt/1047465.md)
 
