--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-23 [NASA公布“毅力号”登陆火星影片](/articles/voa/1042719.md)
+
+2-23 [中印从边境撤军而争端继续 经济联系或将改善](/articles/voa/1042720.md)
+
+2-23 [报道：美财政部二号人物誓言打击中国等国家的不公平经济做法](/articles/voa/1042721.md)
+
 2-23 [拜登哀悼美国死于新冠病毒的50万人](/articles/voa/1042722.md)
 
 2-23 [关注李柱铭等人案件 佩洛西：庭审是对香港法治的侮辱](/articles/voa/1042723.md)
@@ -594,10 +600,4 @@
 2-11 [拜登上任后美国务院官员首度会晤台驻美代表](/articles/voa/1043017.md)
 
 2-11 [TikTok出售案搁置？白宫：正在审议相关风险](/articles/voa/1043018.md)
-
-2-11 [缅甸政变冲击中资， 一带一路腐败开路政治风险多多](/articles/voa/1043019.md)
-
-2-11 [白宫要义: 拜登: 国防部成立新的中国战略小组，制裁缅甸政变](/articles/voa/1043020.md)
-
-2-11 [美国加入世卫新冠疫苗获取机制资助金额维持现状](/articles/voa/1043021.md)
 
