--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-23 [六神磊磊读金庸 | 你以为你是多数，最后发现你是少数](/articles/cdt/385697.md)
+
+2-23 [Matters | 小银：【译文】”直到你和你的子孙后代都变成中国人”：新疆拘禁过后的生活](/articles/cdt/385698.md)
+
 2-23 [Matters | 猎人格拉库斯：2021年回新疆过年](/articles/cdt/385699.md)
 
 2-23 [【立此存照】男子旅居国外诋毁戍边英雄被上网追逃](/articles/cdt/385702.md)
@@ -596,8 +600,4 @@
 1-21 [Matters | 2020年度黑心企业九大关键词！你中招了吗？](/articles/cdt/386826.md)
 
 1-21 [默存格物｜宋石男：锦衣卫那些事儿](/articles/cdt/386827.md)
-
-1-21 [挪威TALK｜对「返乡核酸检测」最新解读的最大疑问](/articles/cdt/386832.md)
-
-1-21 [科技圈日常｜微信十年，当张小龙“被上帝选中”](/articles/cdt/386834.md)
 
