--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-23 [汇丰调整高层人事](/articles/ft/1046010.md)
+
 2-23 [通胀预期攀升导致美国科技股大幅下挫](/articles/ft/1046011.md)
 
 2-23 [美国新冠疫情死亡人数超50万人](/articles/ft/1046012.md)
@@ -598,6 +600,4 @@
 1-12 [FT社评：互联网时代言论自由的边界](/articles/ft/1046308.md)
 
 1-12 [拼多多前员工抨击该公司工作制度](/articles/ft/1046309.md)
-
-1-12 [美国再次将古巴列入“支恐”国家名单](/articles/ft/1046310.md)
 
