--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-23 [美国新冠死亡数破50万 占全球五分之一](/articles/dw/1043751.md)
+
 2-23 [加拿大国会认定中国对维吾尔人种族灭绝](/articles/dw/1043752.md)
 
 2-23 [北京无视外国批评 美批逃避责任](/articles/dw/1043753.md)
@@ -598,6 +600,4 @@
 2-6 [冬季猪瘟增加 中国猪肉产量难恢复？](/articles/dw/1044049.md)
 
 2-6 [的士也上天 未来不是梦](/articles/dw/1044050.md)
-
-2-5 [德语媒体：为何缅甸对中国如此重要](/articles/dw/1044051.md)
 
