--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-23 [歇业近一年  纽约市戏院获准3月恢复营业 – 法国国际广播电台 - RFI](/articles/rfi/1034217.md)
+
 2-23 [涉走私毒品 墨毒枭古兹曼妻子美国遭逮捕 – 法国国际广播电台 - RFI](/articles/rfi/1034218.md)
 
 2-23 [首批中国科兴疫苗24日抵泰国 总理表示：愿带头接种](/articles/rfi/1034219.md)
@@ -598,6 +600,4 @@
 2-18 [科企用新闻要付费 Google与新闻集团达成协议 – 法国国际广播电台 - RFI](/articles/rfi/1034515.md)
 
 2-18 [脸书禁贴新闻 澳洲：错误决定 – 法国国际广播电台 - RFI](/articles/rfi/1034516.md)
-
-2-18 [大直美直落二淘汰小威 晋级澳网决赛 – 法国国际广播电台 - RFI](/articles/rfi/1034517.md)
 
