--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-23 [无惧暴力镇压，缅甸抗议者举行全国大罢工](/articles/nyt/1047163.md)
+
 2-23 [针对亚裔的种族暴力揭示的问题](/articles/nyt/1047164.md)
 
 2-23 [简报：林郑月娥公开接种科兴疫苗；缅甸抗议者全国大罢工](/articles/nyt/1047165.md)
@@ -598,6 +600,4 @@
 12-9 [简报：美国制裁令引发中方抗议；英国启动新冠疫苗接种](/articles/nyt/1047461.md)
 
 12-9 [美国新一代中餐厅的深层危机](/articles/nyt/1047462.md)
-
-12-8 [被Pornhub毁掉的孩子](/articles/nyt/1047463.md)
 
