--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,11 +1,13 @@
 中国数字时代
 ------
 
+2-23 [野夫： 甲午飘零纪事](/articles/cdt/385689.md)
+
 2-23 [后生价值 | 一审不判离：十万份判决书，勾勒出离婚自由的末路](/articles/cdt/385691.md)
 
 2-23 [六神磊磊读金庸 | 你以为你是多数，最后发现你是少数](/articles/cdt/385697.md)
 
-2-23 [Matters | 小银：【译文】”直到你和你的子孙后代都变成中国人”：新疆拘禁过后的生活](/articles/cdt/385698.md)
+2-23 [Matters | 小银：【译文】“直到你和你的子孙后代都变成中国人”：新疆拘禁过后的生活](/articles/cdt/385698.md)
 
 2-23 [Matters | 猎人格拉库斯：2021年回新疆过年](/articles/cdt/385699.md)
 
@@ -598,6 +600,4 @@
 1-22 [NGOCN | 十二月月报：一起向历史要答案](/articles/cdt/386819.md)
 
 1-22 [2047BBS | 拜登就职典礼上的22岁非裔女诗人：表达自我是一种政治选择](/articles/cdt/386825.md)
-
-1-21 [Matters | 2020年度黑心企业九大关键词！你中招了吗？](/articles/cdt/386826.md)
 
