--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-23 [美国新冠死亡人数破50万 中国官媒：这证明美式人权已破产](/articles/voa/1042717.md)
+
 2-23 [加拿大议会认定中国对维吾尔人种族灭绝，呼吁冬奥会地点移出北京](/articles/voa/1042718.md)
 
 2-23 [NASA公布“毅力号”登陆火星影片](/articles/voa/1042719.md)
@@ -598,6 +600,4 @@
 2-11 [热门乐团用气泡包装观众突破新冠封锁](/articles/voa/1043015.md)
 
 2-11 [跨党参议员要求亚马逊老板解释与据报参与监控维吾尔人的中国公司的交易](/articles/voa/1043016.md)
-
-2-11 [拜登上任后美国务院官员首度会晤台驻美代表](/articles/voa/1043017.md)
 
