--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-23 [疫情加剧生活及文化压力，日本女性自杀率飙升](/articles/nyt/1047161.md)
+
 2-23 [精子在告诉我们什么？](/articles/nyt/1047162.md)
 
 2-23 [无惧暴力镇压，缅甸抗议者举行全国大罢工](/articles/nyt/1047163.md)
@@ -598,6 +600,4 @@
 12-9 [美国就香港制裁14名中国高官，引发北京抗议](/articles/nyt/1047459.md)
 
 12-9 [中国尼泊尔宣布珠穆朗玛峰新海拔：8848.86米](/articles/nyt/1047460.md)
-
-12-9 [简报：美国制裁令引发中方抗议；英国启动新冠疫苗接种](/articles/nyt/1047461.md)
 
