--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-23 [美国再制裁两名缅甸军方官员 欧盟称做好了制裁准备](/articles/voa/1042716.md)
+
 2-23 [美国新冠死亡人数破50万 中国官媒：这证明美式人权已破产](/articles/voa/1042717.md)
 
 2-23 [加拿大议会认定中国对维吾尔人种族灭绝，呼吁冬奥会地点移出北京](/articles/voa/1042718.md)
@@ -598,6 +600,4 @@
 2-11 [俄罗斯以违反“外国代理人”法为由对自由欧洲电台/自由电台处以罚款](/articles/voa/1043014.md)
 
 2-11 [热门乐团用气泡包装观众突破新冠封锁](/articles/voa/1043015.md)
-
-2-11 [跨党参议员要求亚马逊老板解释与据报参与监控维吾尔人的中国公司的交易](/articles/voa/1043016.md)
 
