--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-23 [疫情中走红的纽约唐人街烧饼店](/articles/nyt/1047160.md)
+
 2-23 [疫情加剧生活及文化压力，日本女性自杀率飙升](/articles/nyt/1047161.md)
 
 2-23 [精子在告诉我们什么？](/articles/nyt/1047162.md)
@@ -598,6 +600,4 @@
 12-9 [关于英国新冠疫苗接种，你需要了解的七个问题](/articles/nyt/1047458.md)
 
 12-9 [美国就香港制裁14名中国高官，引发北京抗议](/articles/nyt/1047459.md)
-
-12-9 [中国尼泊尔宣布珠穆朗玛峰新海拔：8848.86米](/articles/nyt/1047460.md)
 
