--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-23 [发起谴责缅甸军政府签名运动   广东维权人士肖育辉被传唤](/articles/rfa/1046329.md)
+
+2-23 [特规拜随！美台互动公开化 台外交部：台美友好不受政权更替影响](/articles/rfa/1046330.md)
+
+2-23 [陆委会新主委盼疫后恢复两岸交流 拟修法保护高科技](/articles/rfa/1046331.md)
+
 2-23 [香港社运人士周庭、林朗彦保释申请再落空](/articles/rfa/1046332.md)
 
 2-23 [中国拟打“稀土牌”    美国严阵以待](/articles/rfa/1046333.md)
@@ -594,10 +600,4 @@
 1-22 [拜登眼中的习近平: 从“朋友”到“恶棍”](/articles/rfa/1046627.md)
 
 1-22 [法律专家：RCEP存在争端解决机制的缺陷](/articles/rfa/1046628.md)
-
-1-22 [欧洲议会谴责中共镇压香港民主派 英国施压英籍律师退出民主派案检控](/articles/rfa/1046629.md)
-
-1-22 [美英德加等14国发声明 吁中国释放张展 结束媒体审查](/articles/rfa/1046630.md)
-
-1-21 [人大修订医师法鼓励上报疫情    学者指实际是禁止医生吹哨](/articles/rfa/1046631.md)
 
