--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-23 [港府拟立法要求议员宣誓效忠](/articles/dw/1043745.md)
+
+2-23 [爱沙尼亚：欧盟向俄发出 “强烈信号“](/articles/dw/1043746.md)
+
+2-23 [客座评论:拜登对华政策的四个关键词](/articles/dw/1043747.md)
+
 2-23 [塞尔维亚：中国最中意的合作伙伴](/articles/dw/1043748.md)
 
 2-23 [中大撒粉案再拘两人 宿舍导师也被捕](/articles/dw/1043749.md)
@@ -594,10 +600,4 @@
 2-6 [台湾“罢捷案”未通过 学者担心政治闹剧](/articles/dw/1044043.md)
 
 2-6 [为难民发声 叙利亚人参选联邦议院议员](/articles/dw/1044044.md)
-
-2-6 [新冠疫苗接种了——然后呢？](/articles/dw/1044045.md)
-
-2-6 [缅甸爆发大规模反军政府示威](/articles/dw/1044046.md)
-
-2-6 [民众不满加剧 缅甸祭出断网大招](/articles/dw/1044047.md)
 
