--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-23 [批评岩隈久志等球员英文烂 MLB水手执行长为失言请辞 – 法国国际广播电台 - RFI](/articles/rfi/1034179.md)
+
+2-23 [巴格达美国使馆所在地  遭到火箭弹袭击 – 法国国际广播电台 - RFI](/articles/rfi/1034180.md)
+
+2-23 [缅甸抗议者无惧暴力 国际呼吁停止镇压考虑制裁 - 要闻解说](/articles/rfi/1034181.md)
+
+2-23 [佐拉：Clubhouse短暂火爆反驳了中国审查制度的必要性 - 公民论坛](/articles/rfi/1034182.md)
+
 2-23 [美众议院预算委员会批准1.9万亿拜登新冠援款议案 本周表决](/articles/rfi/1034183.md)
 
 2-23 [美舰侵南沙群岛12浬领海马批侵犯主权民进党称协防台湾](/articles/rfi/1034184.md)
@@ -592,12 +600,4 @@
 2-19 [英加宣布制裁缅甸多名军头 为军事政变和侵犯人权负责](/articles/rfi/1034477.md)
 
 2-19 [法国下院通过反伊斯兰主义分裂法 巴黎人怎么看](/articles/rfi/1034478.md)
-
-2-19 [中国否认支持缅甸军事政变：中方不愿看到缅甸当前局面](/articles/rfi/1034479.md)
-
-2-19 [美国全国商会：若与中国全面脱钩，美国将付出巨大代价](/articles/rfi/1034480.md)
-
-2-19 [拜登政府寻求台湾协助解决车用芯片短缺问题](/articles/rfi/1034481.md)
-
-2-19 [奥斯汀首次参加北约防长会议：传达美国将重振联盟信息](/articles/rfi/1034482.md)
 
