--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-23 [香港自由及法治指标创新低    首席法官刚上任民望插水](/articles/rfa/1046328.md)
+
 2-23 [发起谴责缅甸军政府签名运动   广东维权人士肖育辉被传唤](/articles/rfa/1046329.md)
 
 2-23 [特规拜随！美台互动公开化 台外交部：台美友好不受政权更替影响](/articles/rfa/1046330.md)
@@ -598,6 +600,4 @@
 1-22 [美国定性新疆“种族灭绝”   意味着什么？](/articles/rfa/1046626.md)
 
 1-22 [拜登眼中的习近平: 从“朋友”到“恶棍”](/articles/rfa/1046627.md)
-
-1-22 [法律专家：RCEP存在争端解决机制的缺陷](/articles/rfa/1046628.md)
 
