--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-23 [为何中国老年人被排除在优先接种新冠疫苗人群之外？](/articles/voa/1042714.md)
+
 2-23 [北京拟下个月修法“确保爱国者治港” 特首表示理解](/articles/voa/1042715.md)
 
 2-23 [美国再制裁两名缅甸军方官员 欧盟称做好了制裁准备](/articles/voa/1042716.md)
@@ -598,6 +600,4 @@
 2-11 [弹劾审判第二天：民主党展示新视频指控特朗普“煽动叛乱”](/articles/voa/1043012.md)
 
 2-11 [美国总统拜登与中国国家主席习近平通电话](/articles/voa/1043013.md)
-
-2-11 [俄罗斯以违反“外国代理人”法为由对自由欧洲电台/自由电台处以罚款](/articles/voa/1043014.md)
 
