--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-23 [希腊呼吁欧盟尽快推出疫苗护照](/articles/ft/1046006.md)
+
 2-23 [Facebook将恢复展示澳大利亚新闻](/articles/ft/1046007.md)
 
 2-23 [沃尔顿家族是怎么“日进斗金”的？](/articles/ft/1046008.md)
@@ -598,6 +600,4 @@
 1-12 [美国主流媒体是否背离了客观独立与言论自由原则？](/articles/ft/1046304.md)
 
 1-12 [澳大利亚以国家安全为由阻止中资收购](/articles/ft/1046305.md)
-
-1-12 [投资中最珍贵的四个字](/articles/ft/1046306.md)
 
