--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+2-23 [七国集团外长谴责缅甸镇压抗议者](/articles/dw/1043737.md)
+
+2-23 [美国警方逮捕墨西哥大毒枭的妻子](/articles/dw/1043738.md)
+
+2-23 [德语媒体：作为外交筹码的中国疫苗](/articles/dw/1043739.md)
+
+2-23 [从“再教育营”到“种族灭绝”：中国新疆政策遭国际谴责](/articles/dw/1043740.md)
+
 2-23 [台陆委会新主委邱太三称不清楚对岸对“台独”的定义](/articles/dw/1043741.md)
 
 2-23 [查阅特朗普税务档案指日可待](/articles/dw/1043742.md)
@@ -592,12 +600,4 @@
 2-7 [餐饮业惨淡经营   去年德国啤酒销量锐减](/articles/dw/1044035.md)
 
 2-7 [一年后，他们怀念这位“吹哨人”](/articles/dw/1044036.md)
-
-2-7 [七张图看一周大事](/articles/dw/1044037.md)
-
-2-7 [澳大利亚无人机教练的烦心事](/articles/dw/1044038.md)
-
-2-6 [又一新冠疫苗获中国有条件批准](/articles/dw/1044039.md)
-
-2-6 [德语媒体：遏制中国就是抵御专制](/articles/dw/1044040.md)
 
