--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-24 [香港将修例 区议员需宣誓拥护《基本法》效忠特区](/articles/voa/1042711.md)
+
+2-23 [因质疑边界冲突死亡人数 中国至少6名网友被抓捕](/articles/voa/1042712.md)
+
 2-23 [美参议院星期二就冲击国会事件举行听证会](/articles/voa/1042713.md)
 
 2-23 [为何中国老年人被排除在优先接种新冠疫苗人群之外？](/articles/voa/1042714.md)
@@ -596,8 +600,4 @@
 2-11 [拜登与习近平在美国大选后首次通话](/articles/voa/1043009.md)
 
 2-11 [布林肯：美日同盟是自由开放印太地区的基石](/articles/voa/1043010.md)
-
-2-11 [四方安全对话峰会筹备之际，澳智库分析台海变局](/articles/voa/1043011.md)
-
-2-11 [弹劾审判第二天：民主党展示新视频指控特朗普“煽动叛乱”](/articles/voa/1043012.md)
 
