--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-24 [特鲁多“访问”白宫，与拜登举行首次会谈](/articles/voa/1042710.md)
+
 2-24 [香港将修例 区议员需宣誓拥护《基本法》效忠特区](/articles/voa/1042711.md)
 
 2-23 [因质疑边界冲突死亡人数 中国至少6名网友被抓捕](/articles/voa/1042712.md)
@@ -598,6 +600,4 @@
 2-11 [SWIFT挺数字人民币跨境 美中货币“热战”将开打？](/articles/voa/1043008.md)
 
 2-11 [拜登与习近平在美国大选后首次通话](/articles/voa/1043009.md)
-
-2-11 [布林肯：美日同盟是自由开放印太地区的基石](/articles/voa/1043010.md)
 
