--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-24 [中国2020舆论宣传大拐弯 只有他是不变量](/articles/rfa/1046324.md)
+
 2-24 [国会议员千里驰援维吾尔人 抗议中国政府种族灭绝](/articles/rfa/1046325.md)
 
 2-23 [藏人怒批中国外长王毅“睁眼说瞎话”](/articles/rfa/1046326.md)
@@ -598,6 +600,4 @@
 1-22 [中国制裁抗中、友台美前官员 克拉奇视为荣誉标章](/articles/rfa/1046622.md)
 
 1-22 [疫情向南扩散   上海小区紧急封闭](/articles/rfa/1046623.md)
-
-1-22 [海外民运人士举办反共网络大会   遭五毛严重干扰](/articles/rfa/1046624.md)
 
