--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-24 [中国试图恐吓在德国的香港活动人士](/articles/voa/1042708.md)
+
+2-24 [美中情局长提名人伯恩斯 曾与中国多次交手](/articles/voa/1042709.md)
+
 2-24 [特鲁多“访问”白宫，与拜登举行首次会谈](/articles/voa/1042710.md)
 
 2-24 [香港将修例 区议员需宣誓拥护《基本法》效忠特区](/articles/voa/1042711.md)
@@ -596,8 +600,4 @@
 2-12 [缅甸民众抗议中国为军方封锁网络提供技术支持](/articles/voa/1043006.md)
 
 2-11 [中国和印度开始从边境对峙地区撤军](/articles/voa/1043007.md)
-
-2-11 [SWIFT挺数字人民币跨境 美中货币“热战”将开打？](/articles/voa/1043008.md)
-
-2-11 [拜登与习近平在美国大选后首次通话](/articles/voa/1043009.md)
 
