--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-24 [友朋说 | 刘擎：创伤记忆与雪耻型民族主义](/articles/cdt/385660.md)
+
 2-24 [全现在｜被系统碾压的基层快递：没白没黑工作7个月，结果倒欠13万](/articles/cdt/385665.md)
 
 2-23 [人间三角｜女生坐货拉拉搬家，途中跳窗身亡：平台完善，非得付出生命代价吗？](/articles/cdt/385677.md)
@@ -598,6 +600,4 @@
 1-22 [魔都囡 | 深夜泪奔！B站最惨up主活活饿死，让网友彻底破防痛哭！](/articles/cdt/386782.md)
 
 1-22 [自由亚洲 | 流亡乌克兰的哈萨克族男子：仍担忧遭到遣返](/articles/cdt/386789.md)
-
-1-22 [新熵 | 核酸检测背后的疯狂生意经](/articles/cdt/386800.md)
 
