--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+2-24 [美报告：港版国安法迎合北京 香港正失独立性](/articles/rfa/1046317.md)
+
+2-24 [欧盟对华立场日趋强硬    向美国靠拢](/articles/rfa/1046318.md)
+
+2-24 [河北网民因纪念疫情的网文被判刑](/articles/rfa/1046319.md)
+
+2-24 [未获世卫批准却大搞疫苗外交  北京或另有所求](/articles/rfa/1046320.md)
+
 2-24 [CGTN被英国吊销执照 另辟途径找法国重获播映权](/articles/rfa/1046321.md)
 
 2-24 [专访:  一封求救信引发的对中国强迫劳动的调查](/articles/rfa/1046322.md)
@@ -592,12 +600,4 @@
 1-23 [十九岁四川藏人僧侣疑狱中受虐致死](/articles/rfa/1046615.md)
 
 1-23 [中国反对欧洲议会香港决议案  欧盟: 坚定捍卫香港](/articles/rfa/1046616.md)
-
-1-22 [两名新疆流亡者在哈萨克斯坦遇袭    事件中方背景遭质疑](/articles/rfa/1046617.md)
-
-1-22 [人大指少数民族语言教学违宪   学者：违背建党精神](/articles/rfa/1046618.md)
-
-1-22 [专访前达赖喇嘛驻台代表：释放善意，换不来共产党的善意](/articles/rfa/1046619.md)
-
-1-22 [台湾独派呼吁展现比美国更积极的抗中态度](/articles/rfa/1046620.md)
 
