--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-24 [美国宇航局“毅力号”火星车传回人类首次听到的火星录音](/articles/voa/1042700.md)
+
+2-24 [气候变化：美中合作的起点还是北京施压华盛顿的工具？](/articles/voa/1042701.md)
+
 2-24 [参议院确认拜登的联合国大使人选](/articles/voa/1042702.md)
 
 2-24 [时事大家谈: 习近平要求树立“正确党史观”，党史也得姓党？](/articles/voa/1042703.md)
@@ -596,8 +600,4 @@
 2-12 [香港黄色经济圈小型”和你宵”遍地开花 贺年物品将抗争理念融入生活](/articles/voa/1042998.md)
 
 2-12 [中国禁止BBC世界新闻台在华落地 英外相称“不可接受”](/articles/voa/1042999.md)
-
-2-12 [人权观察：新冠疫情成政府打压言论自由的借口，中国被点名](/articles/voa/1043000.md)
-
-2-12 [专家：中国海警船授权开火标志南中国海紧张局势升级](/articles/voa/1043001.md)
 
