--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-24 [【网络民议】微博网民“玛丽莲梦六”获刑6个月  搜狐新闻评论区翻车](/articles/cdt/385654.md)
+
 2-24 [罗翔说刑法 | 为什么网络发帖不宜以寻衅滋事论处？](/articles/cdt/385656.md)
 
 2-24 [友朋说 | 刘擎：创伤记忆与雪耻型民族主义](/articles/cdt/385660.md)
@@ -598,6 +600,4 @@
 1-23 [【中国哭墙】他才22岁，我好难过（1月18-23日，2021年）](/articles/cdt/386777.md)
 
 1-23 [德国之声 | 美国务院：2019年秋 武汉病毒所已有人出现症状](/articles/cdt/386779.md)
-
-1-22 [魔都囡 | 深夜泪奔！B站最惨up主活活饿死，让网友彻底破防痛哭！](/articles/cdt/386782.md)
 
