--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+2-24 [中国疫苗外交旨在深化与中欧和东欧的联系](/articles/voa/1042696.md)
+
+2-24 [VOA连线(张蓉湘): 美深化与欧合作顶回中国试图破坏国际规则](/articles/voa/1042697.md)
+
+2-24 [抵制北京冬奥会？赞助商面临的压力不断加大](/articles/voa/1042698.md)
+
+2-24 [官员：美联航客机事故或与金属疲劳有关](/articles/voa/1042699.md)
+
 2-24 [美国宇航局“毅力号”火星车传回人类首次听到的火星录音](/articles/voa/1042700.md)
 
 2-24 [气候变化：美中合作的起点还是北京施压华盛顿的工具？](/articles/voa/1042701.md)
@@ -592,12 +600,4 @@
 2-12 [时事大家谈: Clubhouse在“墙国”昙花一现 北京忌讳言论自由如天敌](/articles/voa/1042994.md)
 
 2-12 [拜登取消美墨边境紧急状态](/articles/voa/1042995.md)
-
-2-12 [专家：挥别疫情 2021美国经济可望强势反弹](/articles/voa/1042996.md)
-
-2-12 [拜登打造“反制中国联盟”不可能？不同领域的“自愿联盟”已现雏形](/articles/voa/1042997.md)
-
-2-12 [香港黄色经济圈小型”和你宵”遍地开花 贺年物品将抗争理念融入生活](/articles/voa/1042998.md)
-
-2-12 [中国禁止BBC世界新闻台在华落地 英外相称“不可接受”](/articles/voa/1042999.md)
 
