--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+2-24 [自由亚洲 | 独家专访王靖渝：质疑士兵阵亡是不愿生活在谎言的国度](/articles/cdt/385644.md)
+
+2-24 [光传媒 | 许章润：致意这个美好人间](/articles/cdt/385645.md)
+
+2-24 [光传媒 | 冯睎干：革除「陋习」到革除「陋刃」](/articles/cdt/385646.md)
+
 2-24 [德国之声 | 加拿大国会认定中国对维吾尔人种族灭绝](/articles/cdt/385647.md)
 
 2-24 [【网络民议】微博网民“玛丽莲梦六”获刑6个月  搜狐新闻评论区翻车](/articles/cdt/385654.md)
@@ -594,10 +600,4 @@
 1-23 [BBC | 武汉封城一周年记：“我把遗书和遗言都写好了”（节选）](/articles/cdt/386763.md)
 
 1-23 [端传媒 | 纪录片里的武汉封城《76天》，夹缝中定格的人性（节选）](/articles/cdt/386770.md)
-
-1-24 [硝美丽 | 郭晶：武汉封城一周年记](/articles/cdt/386773.md)
-
-1-23 [全现在 | 一年过去了，武汉人还记得那一天吗？](/articles/cdt/386775.md)
-
-1-23 [【中国哭墙】他才22岁，我好难过（1月18-23日，2021年）](/articles/cdt/386777.md)
 
