--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-24 [美联储主席：美国经济复苏“远未完成”](/articles/voa/1042693.md)
+
+2-24 [高尔夫球名将伍兹发生严重车祸并受伤](/articles/voa/1042694.md)
+
+2-24 [美台驻WTO官员在日内瓦会晤](/articles/voa/1042695.md)
+
 2-24 [中国疫苗外交旨在深化与中欧和东欧的联系](/articles/voa/1042696.md)
 
 2-24 [VOA连线(张蓉湘): 美深化与欧合作顶回中国试图破坏国际规则](/articles/voa/1042697.md)
@@ -594,10 +600,4 @@
 2-12 [考虑更多出口限制，拜登对华科技政策现雏形？](/articles/voa/1042991.md)
 
 2-12 [拜登政府要求法院暂停审理有关Wechat和TikTok的案件](/articles/voa/1042992.md)
-
-2-12 [拜登:美国如果不行动起来 中国“会吃掉我们的午餐”](/articles/voa/1042993.md)
-
-2-12 [时事大家谈: Clubhouse在“墙国”昙花一现 北京忌讳言论自由如天敌](/articles/voa/1042994.md)
-
-2-12 [拜登取消美墨边境紧急状态](/articles/voa/1042995.md)
 
