--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-24 [国会前安保官员称国会骚乱事件的安全疏失与情报失误有关](/articles/voa/1042690.md)
+
+2-24 [伴随老师接种疫苗 催促返校呼声渐高](/articles/voa/1042691.md)
+
+2-24 [加州疫情有所好转 学校重开未成共识](/articles/voa/1042692.md)
+
 2-24 [美联储主席：美国经济复苏“远未完成”](/articles/voa/1042693.md)
 
 2-24 [高尔夫球名将伍兹发生严重车祸并受伤](/articles/voa/1042694.md)
@@ -594,10 +600,4 @@
 2-12 [疫苗发放关注公平 地方官员呼吁联邦拨款](/articles/voa/1042988.md)
 
 2-12 [弹劾案起诉方：骚乱者是在服从特朗普的命令](/articles/voa/1042989.md)
-
-2-12 [中国人权律师余文生狱中荣获国际人权奖](/articles/voa/1042990.md)
-
-2-12 [考虑更多出口限制，拜登对华科技政策现雏形？](/articles/voa/1042991.md)
-
-2-12 [拜登政府要求法院暂停审理有关Wechat和TikTok的案件](/articles/voa/1042992.md)
 
