--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-24 [忧虑通膨 日股开低 – 法国国际广播电台 - RFI](/articles/rfi/1034145.md)
+
 2-24 [香港房价连续11年被评“全球最难以负担”](/articles/rfi/1034146.md)
 
 2-24 [Fed主席信心喊话 道琼标普指数黑翻红 – 法国国际广播电台 - RFI](/articles/rfi/1034147.md)
@@ -598,6 +600,4 @@
 2-19 [香港失业率7% 创17年新高 料续攀升至年中](/articles/rfi/1034443.md)
 
 2-19 [整治港台：报告斥问责意识薄弱 建议收权 广播处长突遭撤换](/articles/rfi/1034444.md)
-
-2-19 [中国首次承认去年中印边界冲突中4名官兵阵亡](/articles/rfi/1034445.md)
 
