--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-24 [“运动员应知道风险” 美国会共和党领袖推立法、致函白宫反制北京冬奥](/articles/voa/1042689.md)
+
 2-24 [国会前安保官员称国会骚乱事件的安全疏失与情报失误有关](/articles/voa/1042690.md)
 
 2-24 [伴随老师接种疫苗 催促返校呼声渐高](/articles/voa/1042691.md)
@@ -598,6 +600,4 @@
 2-12 [美国谴责中国禁止BBC世界新闻台在华落地](/articles/voa/1042987.md)
 
 2-12 [疫苗发放关注公平 地方官员呼吁联邦拨款](/articles/voa/1042988.md)
-
-2-12 [弹劾案起诉方：骚乱者是在服从特朗普的命令](/articles/voa/1042989.md)
 
