--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-24 [人权组织呼吁抵制北京冬奥 多数赞助商未予表态](/articles/voa/1042686.md)
+
+2-24 [报道：美参议员将重新推出应对中国对美企言论审查的法案](/articles/voa/1042687.md)
+
+2-24 [“梦想金州”成“失乐园”？加州居民为何纷纷搬离](/articles/voa/1042688.md)
+
 2-24 [“运动员应知道风险” 美国会共和党领袖推立法、致函白宫反制北京冬奥](/articles/voa/1042689.md)
 
 2-24 [国会前安保官员称国会骚乱事件的安全疏失与情报失误有关](/articles/voa/1042690.md)
@@ -594,10 +600,4 @@
 2-12 [中共数字威权主义的最终目标：培养自我审查的“和谐新人类”](/articles/voa/1042984.md)
 
 2-12 [美国制裁参加军事政变的缅甸军方领导人](/articles/voa/1042985.md)
-
-2-12 [专家解读拜习通话: 新美中关系合作与对立并存](/articles/voa/1042986.md)
-
-2-12 [美国谴责中国禁止BBC世界新闻台在华落地](/articles/voa/1042987.md)
-
-2-12 [疫苗发放关注公平 地方官员呼吁联邦拨款](/articles/voa/1042988.md)
 
