--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-24 [刺激计划何时会变得过度？](/articles/ft/1046000.md)
+
 2-24 [为下一个黄金机遇布局](/articles/ft/1046001.md)
 
 2-24 [美国股市反弹 科技股跌势减缓](/articles/ft/1046002.md)
@@ -598,6 +600,4 @@
 1-13 [彭斯：不会援引宪法第25条修正案罢免特朗普](/articles/ft/1046298.md)
 
 1-13 [美要求入境航班旅客提供新冠检测阴性证明](/articles/ft/1046299.md)
-
-1-13 [特朗普警告称弹劾他会激起“巨大愤怒”](/articles/ft/1046300.md)
 
