--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-24 [持续整肃民主派 香港区议员:政府无底线](/articles/dw/1043731.md)
+
+2-24 [应对中国崛起 美推动高科技法案](/articles/dw/1043732.md)
+
+2-24 [人权观察: 新疆被判长期监禁者明显增加](/articles/dw/1043733.md)
+
 2-24 [新疆「种族灭绝」讨论不休  北京反击外媒拷问](/articles/dw/1043734.md)
 
 2-24 [港府拟立法要求区议员宣誓效忠](/articles/dw/1043735.md)
@@ -594,10 +600,4 @@
 2-7 [奥地利有意在本国生产俄、中两国疫苗](/articles/dw/1044029.md)
 
 2-7 [中国向非洲援助疫苗：救命恩人？政治考量？](/articles/dw/1044030.md)
-
-2-7 [法国新书《世家》再揭精英娈童问题](/articles/dw/1044031.md)
-
-2-7 [双重打击之下 古巴从中国进口额大幅下跌](/articles/dw/1044032.md)
-
-2-7 [研究：准确率高达94%！训练过的狗能闻出新冠](/articles/dw/1044033.md)
 
