--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-24 [你敢相信这事竟然发生在美国？](/articles/nyt/1047154.md)
+
 2-24 [研究发现喝咖啡可能降低心力衰竭风险](/articles/nyt/1047155.md)
 
 2-24 [用步枪和钢丝钳断网：缅甸积极建设数字防火墙](/articles/nyt/1047156.md)
@@ -598,6 +600,4 @@
 12-10 [图片中的2020年](/articles/nyt/1047452.md)
 
 12-10 [被中国拘留两年后，两名加拿大人仍命运难料](/articles/nyt/1047453.md)
-
-12-10 [中国新冠疫苗首次在海外获批，有效率达86%](/articles/nyt/1047454.md)
 
