--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-24 [拜登政府称将沿用前政府资助设立的机制继续关注湄公河上游中国的举动](/articles/voa/1042683.md)
+
 2-24 [五角大楼称中国派武装海警船进入尖阁诸岛可能导致误判](/articles/voa/1042684.md)
 
 2-24 [谴责北京将两名加拿大公民当谈判筹码 拜登与特鲁多商讨共同反制中国威胁](/articles/voa/1042685.md)
@@ -598,6 +600,4 @@
 2-12 [拜登主持有关基础设施投资的会议，称再不行动会被中国打败](/articles/voa/1042981.md)
 
 2-12 [缅甸网络安全专家：中国正帮助缅甸军方建立防火墙](/articles/voa/1042982.md)
-
-2-12 [白宫要义: 拜登说中国想取代美国，白宫说拜登政府将做中国人权的民主榜样](/articles/voa/1042983.md)
 
