--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-24 [香港财政告急   如何力挽外资信心？](/articles/rfa/1046311.md)
+
 2-24 [邱太三抛春暖花开 国台办回应东风、雨露就是九二共识](/articles/rfa/1046312.md)
 
 2-24 [馬英九吁北京比照台灣处理二二八原则 平反六四](/articles/rfa/1046313.md)
@@ -598,6 +600,4 @@
 1-25 [美国新政府上任 北京连两天共28架次军机扰台](/articles/rfa/1046609.md)
 
 1-25 [车用电子芯片全球大缺货 美日德向台湾求援](/articles/rfa/1046610.md)
-
-1-25 [新疆流亡哈国两难民遇袭     人权组织怀疑跟中国政府有关](/articles/rfa/1046611.md)
 
