--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-24 [台湾陆委会释对话善意，国台办以“九二共识”僵化回应](/articles/voa/1042682.md)
+
 2-24 [拜登政府称将沿用前政府资助设立的机制继续关注湄公河上游中国的举动](/articles/voa/1042683.md)
 
 2-24 [五角大楼称中国派武装海警船进入尖阁诸岛可能导致误判](/articles/voa/1042684.md)
@@ -598,6 +600,4 @@
 2-12 [“让政府更贴近民意” 加州华人看罢免州长行动](/articles/voa/1042980.md)
 
 2-12 [拜登主持有关基础设施投资的会议，称再不行动会被中国打败](/articles/voa/1042981.md)
-
-2-12 [缅甸网络安全专家：中国正帮助缅甸军方建立防火墙](/articles/voa/1042982.md)
 
