--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-24 [美日不满中国实施海警法 北京称美日安保条约是冷战产物](/articles/voa/1042680.md)
+
 2-24 [香港公布民主派议员总辞后的首份财政预算 首笔国安开支80亿港元](/articles/voa/1042681.md)
 
 2-24 [台湾陆委会释对话善意，国台办以“九二共识”僵化回应](/articles/voa/1042682.md)
@@ -598,6 +600,4 @@
 2-12 [奔向自由，香港青年只身跨越半个地球逃亡美国](/articles/voa/1042978.md)
 
 2-12 [前苏联间谍工具在比弗利山庄拍卖](/articles/voa/1042979.md)
-
-2-12 [“让政府更贴近民意” 加州华人看罢免州长行动](/articles/voa/1042980.md)
 
