--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-24 [德国一萨拉菲分子被判10年监禁](/articles/dw/1043722.md)
+
+2-24 [德国士兵援助葡萄牙 医院属于中国集团](/articles/dw/1043723.md)
+
 2-24 [香港财政赤字降低 来年纾困是重点](/articles/dw/1043724.md)
 
 2-24 [默克尔警告第三波疫情已经到来](/articles/dw/1043725.md)
@@ -596,8 +600,4 @@
 2-8 [澳籍记者成蕾被捕  被控泄漏中国国家机密](/articles/dw/1044020.md)
 
 2-8 [强调与中国「极端竞争」  拜登称习近平「骨子里没民主」](/articles/dw/1044021.md)
-
-2-8 [柬埔寨收60万剂中国疫苗　欧洲促北京公布数据](/articles/dw/1044022.md)
-
-2-7 [缅甸：大批民众再次走上街头 谴责政变](/articles/dw/1044023.md)
 
