--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-25 [河北张姓女去年贴文揭武汉封城7大惨况遭寻衅滋事罪重判](/articles/rfi/1034098.md)
+
+2-25 [法国外交部长谴责 中国制度性压迫新疆维吾尔人 – 法国国际广播电台 - RFI](/articles/rfi/1034099.md)
+
+2-25 [西班牙转型正义 移除境内最后1座佛朗哥雕像 – 法国国际广播电台 - RFI](/articles/rfi/1034100.md)
+
 2-24 [中印边境打归打 两国经贸无大碍](/articles/rfi/1034101.md)
 
 2-24 [中国国药疫苗攻破欧盟 第一国匈牙利今天开打](/articles/rfi/1034102.md)
@@ -594,10 +600,4 @@
 2-20 [华春莹发言人一句话惹得爆笑如雷](/articles/rfi/1034396.md)
 
 2-20 [马克龙建议西方国家迅速向非洲运送1300万剂新冠疫苗](/articles/rfi/1034397.md)
-
-2-20 [比特币再创新高 总市值突破1兆美元 – 法国国际广播电台 - RFI](/articles/rfi/1034398.md)
-
-2-20 [香港司法系统最近在朝着惩罚性的方向偏移 - 法国世界报](/articles/rfi/1034399.md)
-
-2-20 [拜登直指北京破坏规则经济滥用](/articles/rfi/1034400.md)
 
