--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-25 [国台办发言人点名“这位先生”后再点“台湾的先生们”](/articles/dw/1043718.md)
+
 2-24 [德国汉堡港查获有史以来最大数量走私毒品](/articles/dw/1043719.md)
 
 2-24 [IS在德国头号支持者被判重刑](/articles/dw/1043720.md)
@@ -598,6 +600,4 @@
 2-8 [从常回家看看到就地过年](/articles/dw/1044016.md)
 
 2-8 [喜馬拉雅冰川斷裂 咆哮的山洪沖垮印度大壩](/articles/dw/1044017.md)
-
-2-8 [客座评论：中美互亮底线，“欲报（复）还休”？](/articles/dw/1044018.md)
 
