--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-25 [中国驻法使馆就旅法新疆维族妇女新书发表声明被指“一派胡言“](/articles/rfi/1034096.md)
+
+2-25 [中国即将可为3龄童注射Covid疫苗？](/articles/rfi/1034097.md)
+
 2-25 [河北张姓女去年贴文揭武汉封城7大惨况遭寻衅滋事罪重判](/articles/rfi/1034098.md)
 
 2-25 [法国外交部长谴责 中国制度性压迫新疆维吾尔人 – 法国国际广播电台 - RFI](/articles/rfi/1034099.md)
@@ -596,8 +600,4 @@
 2-20 [中国高学历和医疗人员新冠疫苗接种意愿低](/articles/rfi/1034394.md)
 
 2-20 [精贵的块菌 - 法国美食](/articles/rfi/1034395.md)
-
-2-20 [华春莹发言人一句话惹得爆笑如雷](/articles/rfi/1034396.md)
-
-2-20 [马克龙建议西方国家迅速向非洲运送1300万剂新冠疫苗](/articles/rfi/1034397.md)
 
