--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-25 [香港政治环境变化促使港人移民台湾](/articles/voa/1042677.md)
+
+2-25 [拜登将签署行政令审查美国关键领域的供应链](/articles/voa/1042678.md)
+
 2-25 [中国又有两款新冠疫苗申请上市 或有助于中国“疫苗外交”](/articles/voa/1042679.md)
 
 2-24 [美日不满中国实施海警法 北京称美日安保条约是冷战产物](/articles/voa/1042680.md)
@@ -596,8 +600,4 @@
 2-12 [缅甸抗议活动持续 军方拘押更多政府官员](/articles/voa/1042975.md)
 
 2-12 [人脸识别把人变成“透明人” 中共极权监控下人人自危](/articles/voa/1042976.md)
-
-2-12 [拜登：中国将“吃我们的午餐](/articles/voa/1042977.md)
-
-2-12 [奔向自由，香港青年只身跨越半个地球逃亡美国](/articles/voa/1042978.md)
 
