--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-25 [人权组织报告：新疆穆斯林被判刑案件激增](/articles/rfa/1046300.md)
+
+2-25 [英国17私校被中资收购   英国人惊呼：文化被中共接管](/articles/rfa/1046301.md)
+
 2-25 [英国不会抵制北京冬奥    将助中国步纳粹后尘？](/articles/rfa/1046302.md)
 
 2-25 [中国有望开放个人境外投资  外汇市场要松绑？](/articles/rfa/1046303.md)
@@ -596,8 +600,4 @@
 1-26 [前白宫官员：特朗普对华政策缺乏战略规划](/articles/rfa/1046598.md)
 
 1-26 [吉林通化封城断粮 副市长道歉](/articles/rfa/1046599.md)
-
-1-26 [华裔教授被调查  麻省理工校长和百名教职工声援](/articles/rfa/1046600.md)
-
-1-26 [湖南老人自杀 撕开养老机构暴雷真相](/articles/rfa/1046601.md)
 
