--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-25 [缅甸军政府任命的外长出席曼谷地区会谈](/articles/voa/1042666.md)
+
+2-25 [美两党参议员推出法案 应对中国对美国人及企业的言论审查](/articles/voa/1042667.md)
+
 2-25 [美国政府：一剂式强生新冠疫苗有保护作用](/articles/voa/1042668.md)
 
 2-25 [北京奥运13年后再遭抵制 这次有何不同？](/articles/voa/1042669.md)
@@ -596,8 +600,4 @@
 2-13 [美国总统和第一夫人发表视频祝贺农历新年(全文翻译)](/articles/voa/1042964.md)
 
 2-13 [香港仅余民意代表 区议员：港府行政手段打压区议会](/articles/voa/1042965.md)
-
-2-13 [英中媒体战蔓延，环球电视网被德国禁播](/articles/voa/1042966.md)
-
-2-13 [朝鲜经济每况愈下 金正恩更换经济部长](/articles/voa/1042967.md)
 
