--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-25 [嗅探犬练本领 侦测新冠病毒](/articles/voa/1042659.md)
+
+2-25 [“以牙还牙”：用“美国版一带一路”抗衡中国，能行吗？](/articles/voa/1042660.md)
+
+2-25 [毅力号成功登陆 火星大师展望未来载人飞行](/articles/voa/1042661.md)
+
 2-25 [“毅力”号火星着陆夺眼球 中国“天问一号”何时问？](/articles/voa/1042662.md)
 
 2-25 [候任中情局长警告：美国在与“对抗性”和“掠夺性”的中国竞争](/articles/voa/1042663.md)
@@ -594,10 +600,4 @@
 2-13 [墨西哥总统支持拜登停建美墨边境墙的决定](/articles/voa/1042957.md)
 
 2-13 [弹劾案辩方：特朗普没有煽动发生在国会大厦的骚乱](/articles/voa/1042958.md)
-
-2-13 [彭博社：中国利用供应链对美国进行间谍活动](/articles/voa/1042959.md)
-
-2-13 [美奥运金牌泳将因参与冲击国会事件而被大陪审团起诉](/articles/voa/1042960.md)
-
-2-13 [拜登以耐心打造对华战略，批评者担心给中国“可乘之机”](/articles/voa/1042961.md)
 
