--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-25 [不能依赖没有共同利益和价值观的外国：拜登下令审议 增强供应链韧性](/articles/voa/1042656.md)
+
+2-25 [美国返回巴黎协定 誓为改善气候努力](/articles/voa/1042657.md)
+
+2-25 [在有可能遭受军事进攻的台湾， 台积电关系到美国的战略安全](/articles/voa/1042658.md)
+
 2-25 [嗅探犬练本领 侦测新冠病毒](/articles/voa/1042659.md)
 
 2-25 [“以牙还牙”：用“美国版一带一路”抗衡中国，能行吗？](/articles/voa/1042660.md)
@@ -594,10 +600,4 @@
 2-13 [路透调查：美国复苏步入正轨 就业增长尚需时日](/articles/voa/1042954.md)
 
 2-13 [冲击美国国会大厦的骚乱者都是些什么样的人？](/articles/voa/1042955.md)
-
-2-13 [为阻止孟晚舟被引渡到美国，华为将汇丰银行告上英国法庭](/articles/voa/1042956.md)
-
-2-13 [墨西哥总统支持拜登停建美墨边境墙的决定](/articles/voa/1042957.md)
-
-2-13 [弹劾案辩方：特朗普没有煽动发生在国会大厦的骚乱](/articles/voa/1042958.md)
 
