--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-25 [拜登废除特朗普颁布的禁止许多绿卡申请者入境的命令](/articles/voa/1042653.md)
+
+2-25 [拜登总统签供应链行政命令，白宫：台湾是美国重要伙伴](/articles/voa/1042654.md)
+
+2-25 [即将接受参议院确认质询的美国贸易代表提名人戴琪誓言要中国履行贸易承诺](/articles/voa/1042655.md)
+
 2-25 [不能依赖没有共同利益和价值观的外国：拜登下令审议 增强供应链韧性](/articles/voa/1042656.md)
 
 2-25 [美国返回巴黎协定 誓为改善气候努力](/articles/voa/1042657.md)
@@ -594,10 +600,4 @@
 2-14 [冠病溯源调查帮中国甩锅？WHO被指自损公信力](/articles/voa/1042951.md)
 
 2-13 [欧盟要求中国收回对BBC的禁令，称其违反中国宪法和世界人权宣言](/articles/voa/1042952.md)
-
-2-13 [美国称朝鲜是当务之急](/articles/voa/1042953.md)
-
-2-13 [路透调查：美国复苏步入正轨 就业增长尚需时日](/articles/voa/1042954.md)
-
-2-13 [冲击美国国会大厦的骚乱者都是些什么样的人？](/articles/voa/1042955.md)
 
