--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+2-25 [“小甜甜”布兰妮和我：被好莱坞毁掉的女童星](/articles/nyt/1047152.md)
+
+2-25 [简报：香港利用历史灌输爱国主义；全球疫苗接种计划启动](/articles/nyt/1047153.md)
+
 2-24 [你敢相信这事竟然发生在美国？](/articles/nyt/1047154.md)
 
 2-24 [研究发现喝咖啡可能降低心力衰竭风险](/articles/nyt/1047155.md)
@@ -596,8 +600,4 @@
 12-10 [2021年度色彩：迎接隧道尽头的亮光](/articles/nyt/1047450.md)
 
 12-10 [拜登拟任命华裔女律师戴琦为贸易代表](/articles/nyt/1047451.md)
-
-12-10 [图片中的2020年](/articles/nyt/1047452.md)
-
-12-10 [被中国拘留两年后，两名加拿大人仍命运难料](/articles/nyt/1047453.md)
 
