--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-25 [脸书将投资10亿美元支持新闻业 捍卫在澳洲屏蔽新闻 – 法国国际广播电台 - RFI](/articles/rfi/1034076.md)
+
+2-25 [拜登签署行政命令因应晶片荒 誓不让关键产品短缺 – 法国国际广播电台 - RFI](/articles/rfi/1034077.md)
+
+2-25 [国际奥会评估4月底决定 东京奥运是否开放外国客 – 法国国际广播电台 - RFI](/articles/rfi/1034078.md)
+
 2-25 [美国中央情报局长人选：胜过中国将是美国国家安全的关键](/articles/rfi/1034079.md)
 
 2-25 [疫情的发展迫使法国政府实施局部闭关封城措施 - 法国世界报](/articles/rfi/1034080.md)
@@ -594,10 +600,4 @@
 2-20 [澳网女单 大（土反）直美二度封后 – 法国国际广播电台 - RFI](/articles/rfi/1034374.md)
 
 2-20 [中国人社区爆32例感染  柬埔寨防疫破功 – 法国国际广播电台 - RFI](/articles/rfi/1034375.md)
-
-2-20 [Google又一AI伦理学研究员遭开除 – 法国国际广播电台 - RFI](/articles/rfi/1034376.md)
-
-2-20 [美国与巴基斯坦商谈延后阿富汗撤军 – 法国国际广播电台 - RFI](/articles/rfi/1034377.md)
-
-2-20 [缅甸情势紧张  警方向抗议民众开枪至少2伤 – 法国国际广播电台 - RFI](/articles/rfi/1034378.md)
 
