--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-25 [游戏驿站股价在收盘前90分钟翻番](/articles/ft/1045994.md)
+
 2-25 [每周时事分析：中国对美喊话为何一再收效不显著？](/articles/ft/1045995.md)
 
 2-24 [“抱团股”崩盘是否会重现？](/articles/ft/1045996.md)
@@ -598,6 +600,4 @@
 1-13 [从清代旅蒙商号的“万金帐”看数据的产权属性特征](/articles/ft/1046292.md)
 
 1-13 [FT社评：今年有望成为电动汽车业起飞转折点](/articles/ft/1046293.md)
-
-1-13 [疫情时飞行常客将不再常飞——如果我们啥也不做的话](/articles/ft/1046294.md)
 
