--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-25 [为逼海外家人噤声 中国二度关押新疆维族女子](/articles/dw/1043714.md)
+
+2-25 [美国凖贸易代表戴琪: 中国是对手也是伙伴](/articles/dw/1043715.md)
+
 2-25 [拼经济还是顾人权 英国面对北京的两难](/articles/dw/1043716.md)
 
 2-25 [美政府再添抗中成员 外交老手出掌中情局](/articles/dw/1043717.md)
@@ -596,8 +600,4 @@
 2-8 [中国与中东欧 “17+1”峰会遇冷场？](/articles/dw/1044012.md)
 
 2-8 [美国计划重返联合国人权理事会](/articles/dw/1044013.md)
-
-2-8 [教宗方济各赞赏延长梵中临时协议](/articles/dw/1044014.md)
-
-2-8 [中国反垄断指南出炉  整肃科技平台「二选一」](/articles/dw/1044015.md)
 
