--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-25 [CIA局长提名人警告中俄情报威胁](/articles/nyt/1047150.md)
+
 2-25 [香港政府利用历史灌输爱国主义和忠诚](/articles/nyt/1047151.md)
 
 2-25 [“小甜甜”布兰妮和我：被好莱坞毁掉的女童星](/articles/nyt/1047152.md)
@@ -598,6 +600,4 @@
 12-11 [Pornhub做出了改变，但这远远不够](/articles/nyt/1047448.md)
 
 12-11 [简报：中国驻美使馆转发特朗普不实推文；图说2020年](/articles/nyt/1047449.md)
-
-12-10 [2021年度色彩：迎接隧道尽头的亮光](/articles/nyt/1047450.md)
 
