--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-25 [习近平称脱贫“创造人间奇迹”      怀念中共打土豪分田地年代](/articles/rfa/1046298.md)
+
 2-25 [习近平表扬中共 “打土豪、分田地” 历史](/articles/rfa/1046299.md)
 
 2-25 [人权组织报告：新疆穆斯林被判刑案件激增](/articles/rfa/1046300.md)
@@ -598,6 +600,4 @@
 1-26 [印度永久禁用近60款中国应用程式](/articles/rfa/1046596.md)
 
 1-26 [美罗斯福号航母抵黄岩岛    学者指美震慑举动将持续](/articles/rfa/1046597.md)
-
-1-26 [前白宫官员：特朗普对华政策缺乏战略规划](/articles/rfa/1046598.md)
 
