--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-25 [西藏导游为外媒提供消息 服刑期间遭虐致死](/articles/voa/1042651.md)
+
 2-25 [拜登上任后第二次 美驱逐舰再驶过台湾海峡](/articles/voa/1042652.md)
 
 2-25 [拜登废除特朗普颁布的禁止许多绿卡申请者入境的命令](/articles/voa/1042653.md)
@@ -598,6 +600,4 @@
 2-14 [时事大家谈：英国变体再突变 3月可能成为美国主要毒株](/articles/voa/1042949.md)
 
 2-14 [时事大家谈：中国多地疫情反弹 就地过年还是回家团圆？](/articles/voa/1042950.md)
-
-2-14 [冠病溯源调查帮中国甩锅？WHO被指自损公信力](/articles/voa/1042951.md)
 
