--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-25 [中国全职太太离婚获5万元补偿引热议](/articles/nyt/1047148.md)
+
 2-25 [对华经济战初步攻势？拜登签署行政令加强供应链](/articles/nyt/1047149.md)
 
 2-25 [CIA局长提名人警告中俄情报威胁](/articles/nyt/1047150.md)
@@ -598,6 +600,4 @@
 12-11 [值得我们一读再读的好书](/articles/nyt/1047446.md)
 
 12-11 [中国驻美使馆转特朗普不实推文，随后称帐号被黑](/articles/nyt/1047447.md)
-
-12-11 [Pornhub做出了改变，但这远远不够](/articles/nyt/1047448.md)
 
